Save/Update files [ci skip]

--- a/source/localisation/achievements_l_english.yml
+++ b/source/localisation/achievements_l_english.yml
@@ -48,7 +48,7 @@
  NEW_ACHIEVEMENT_1_25_NAME:0 "インドの支配者"
  NEW_ACHIEVEMENT_1_25_DESC:1 "首都がヨーロッパにある国で、自国か従属国が全インドを領有する。"
  NEW_ACHIEVEMENT_1_26_NAME:0 "スウェーデンは強すぎない！"
- NEW_ACHIEVEMENT_1_26_DESC:0 "スウェーデンで、バルト海沿岸を全て所有かつ中核州とする。"
+ NEW_ACHIEVEMENT_1_26_DESC:0 "スウェーデンで、バルト海沿岸を全て領有かつ中核州とする。"
  NEW_ACHIEVEMENT_1_27_NAME:0 "我が陸軍は無敵だ！"
  NEW_ACHIEVEMENT_1_27_DESC:0 "7.0以上の陸軍士気を得る。"
  NEW_ACHIEVEMENT_1_28_NAME:0 "全てを支配する海軍"
@@ -249,7 +249,7 @@
  NEW_ACHIEVEMENT_8_31_NAME:0 "産業進化"
  NEW_ACHIEVEMENT_8_31_DESC:0 "グレートブリテンとして、全てのイングランド地方を中核州として領有し、各州の開発度を25以上にする。"
  NEW_ACHIEVEMENT_9_0_NAME:0 "都市の中の都市"
- NEW_ACHIEVEMENT_9_0_DESC:0 "開発度が60以上の中核州を所有する。"
+ NEW_ACHIEVEMENT_9_0_DESC:0 "開発度が60以上の中核州を領有する。"
  NEW_ACHIEVEMENT_9_1_NAME:0 "一つの一族は全てを統べ"
  NEW_ACHIEVEMENT_9_1_DESC:0 "自国の王家が同時に8国以上で君主となる。但し、衛星国は含まれない。"
  NEW_ACHIEVEMENT_9_2_NAME:0 "これぞ我が信仰"
@@ -294,7 +294,7 @@
  NEW_ACHIEVEMENT_9_22_NAME:0 "ストレイトな話"
  NEW_ACHIEVEMENT_9_22_DESC:0 "ホルムズとして、10以上の外交評判を持つ。"
  NEW_ACHIEVEMENT_9_23_NAME:0 "学術的だ"
- NEW_ACHIEVEMENT_9_23_DESC:0 "アテネで、50以上の大学を所有する。"
+ NEW_ACHIEVEMENT_9_23_DESC:0 "アテネで、50以上の大学を領有する。"
  NEW_ACHIEVEMENT_9_24_NAME:0 "唯一の信仰"
  NEW_ACHIEVEMENT_9_24_DESC:0 "世界中の入植不可能でない州の宗教全てが自国の宗教と一致すること。"
  NEW_ACHIEVEMENT_9_25_NAME:0 "イスラム世界"
@@ -314,7 +314,7 @@
  NEW_ACHIEVEMENT_10_0_NAME:0 "凍結資産"
  NEW_ACHIEVEMENT_10_0_DESC:0 "ノヴゴロドで開始し、白海交易ノードで交易力の九割を支配しつつ世界で最高値の交易ノードにする。"
  NEW_ACHIEVEMENT_10_1_NAME:0 "タタールスタン"
- NEW_ACHIEVEMENT_10_1_DESC:0 "カザンかノガイでタタール文化集団の土地を全て所有する。"
+ NEW_ACHIEVEMENT_10_1_DESC:0 "カザンまたはノガイでタタール文化グループの土地をすべて領有する。"
  NEW_ACHIEVEMENT_10_2_NAME:0 "テッラ・マリアナ"
  NEW_ACHIEVEMENT_10_2_DESC:1 "リガとして、バルト海地方を中核州として自国か従属国が領有する。"
  NEW_ACHIEVEMENT_10_3_NAME:0 "天空神への血を！"
@@ -424,7 +424,7 @@
  NEW_ACHIEVEMENT_11_24_NAME:0 "カルタゴ滅ぶべし"
  NEW_ACHIEVEMENT_11_24_DESC:0 "イタリア文化の国で、チュニス地域の荒廃度を100にする。"
  NEW_ACHIEVEMENT_11_25_NAME:0 "しんの中華"
- NEW_ACHIEVEMENT_11_25_DESC:1 "清で中華皇帝となり中国全土を所有する。"
+ NEW_ACHIEVEMENT_11_25_DESC:1 "清で中華皇帝となり中国全土を領有する。"
  NEW_ACHIEVEMENT_11_26_NAME:0 "3つの小さな貢納部族"
  NEW_ACHIEVEMENT_11_26_DESC:0 "3つの部族国家を朝貢国として持つ。"
  NEW_ACHIEVEMENT_11_27_NAME:0 "メイド・イン・ジャパン"
@@ -438,7 +438,7 @@
  NEW_ACHIEVEMENT_11_31_NAME:0 "白羊の勃興"
  NEW_ACHIEVEMENT_11_31_DESC:0 "白羊朝として、1478年までにタブリーズを保有し黒羊朝を滅亡させる。"
  NEW_ACHIEVEMENT_12_0_NAME:0 "ここで馬に草を食べさせよう…そしてここで…"
- NEW_ACHIEVEMENT_12_0_DESC:0 "遊牧民として、穀物を生産する200以上の州を所有する。"
+ NEW_ACHIEVEMENT_12_0_DESC:0 "遊牧民として、穀物を生産する州を200以上領有する。"
  NEW_ACHIEVEMENT_12_1_NAME:0 "ゴールドラッシュ"
  NEW_ACHIEVEMENT_12_1_DESC:0 "1500年より前にキプチャクを再建する。"
  NEW_ACHIEVEMENT_12_2_NAME:0 "航海王子"
@@ -496,9 +496,9 @@
  NEW_ACHIEVEMENT_13_5_NAME:0 "大量生産"
  NEW_ACHIEVEMENT_13_5_DESC:0 "オドーエフで始め、全種類の工場を所有する。"
  NEW_ACHIEVEMENT_13_6_NAME:0 "容赦ない東進"
- NEW_ACHIEVEMENT_13_6_DESC:0 "ロシア国家として開始し、1600年までに東シベリアの海岸沿いの州を所有する。"
+ NEW_ACHIEVEMENT_13_6_DESC:0 "ロシア国家として開始し、1600年までに東シベリアの海岸沿いを領有する。"
  NEW_ACHIEVEMENT_13_7_NAME:0 "もの笑いの種"
- NEW_ACHIEVEMENT_13_7_DESC:0 "ハハ、ヘヘ、ロラン島の州を所有する。"
+ NEW_ACHIEVEMENT_13_7_DESC:0 "ハハ、ヘヘ、ロラン島の州を領有する。"
  NEW_ACHIEVEMENT_13_8_NAME:0 "ヘミングシュテットの教訓"
  NEW_ACHIEVEMENT_13_8_DESC:0 "ディトマールシェンとして、デンマークが存在しない状態でシェランとホラント州を領有する。"
  NEW_ACHIEVEMENT_13_9_NAME:0 "チンプンカンプンだ"
@@ -526,7 +526,7 @@
  NEW_ACHIEVEMENT_14_10_DESC:0 "一代の君主で、6人の異なる配偶者を持つ。"
  NEW_ACHIEVEMENT_7_9_DESC:1 "キルワとして、ザンジバルとボンベイ（ターナ）を中核州として領有する。"
  NEW_ACHIEVEMENT_9_7_DESC:1 "コッテかキャンディで全インドを領有し上座部仏教に改宗させる。"
- NEW_ACHIEVEMENT_10_19_DESC:1 "ソマリ文化の国家として、アフリカの角地方を全て所有し、月当たりの金鉱収入を最低10ダカット以上にする。"
+ NEW_ACHIEVEMENT_10_19_DESC:1 "ソマリ文化の国家として、アフリカの角地方をすべて領有し、月当たりの金鉱収入を最低10ダカット以上にする。"
  NEW_ACHIEVEMENT_10_20_DESC:1 "トヴェリ、ヤロスラヴリ、リャザン、ベロオーゼロ、ロストフ、オドーエフのいずれかで、自国の王朝を変えずに他の全てのリューリク国家を排除する。"
  NEW_ACHIEVEMENT_15_NAME:0 "メーワールは決して変わらない"
  NEW_ACHIEVEMENT_15_DESC:0 "メーワールのミッションを達成する。"
@@ -646,7 +646,7 @@
  NEW_ACHIEVEMENT_74_NAME:0 "ペンギンは何処？"
  NEW_ACHIEVEMENT_74_DESC:1 "マダガスカルの国家で、マダガスカルを統一し、全ての最南端の州を領有する。"
  NEW_ACHIEVEMENT_75_NAME:0 "これでヨシ！"
- NEW_ACHIEVEMENT_75_DESC:0 "+10以上の国家不穏度を抱えた状態で、自国を対象とした包囲網戦争で優勢となる。"
+ NEW_ACHIEVEMENT_75_DESC:0 "+10以上の国家の不穏度を抱えた状態で、自国を対象とした包囲網戦争で優勢となる。"
  NEW_ACHIEVEMENT_76_NAME:0 "カーーーン"
  NEW_ACHIEVEMENT_76_DESC:0 "絶対主義の時代の前に、モンゴル帝国を再興する。"
  NEW_ACHIEVEMENT_77_NAME:0 "ナイト・オブ・カリビアン"
@@ -712,7 +712,7 @@
  NEW_ACHIEVEMENT_107_NAME:0 "五大総主教座の再建"
  NEW_ACHIEVEMENT_107_DESC:0 "ビザンツで開始し、正教会の状態でローマ、コンスタンティノープル、アレクサンドリア、アンティオキア、エルサレムを領有する。"
  NEW_ACHIEVEMENT_108_NAME:0 "メッツ・ハイク"
- NEW_ACHIEVEMENT_108_DESC:0 "カラバフで開始し、大アルメニアの国境部を全て所有、中核化し、コプトに改宗する。"
+ NEW_ACHIEVEMENT_108_DESC:0 "カラバフで開始し、大アルメニアの国境部を全て領有、中核化し、コプトに改宗する。"
  NEW_ACHIEVEMENT_109_NAME:0 "砂漠の力"
  NEW_ACHIEVEMENT_109_DESC:0 "アラビア部族で開始し、オアシス特権を制定し、アラビア地方の開発度を1000以上にする。"
  NEW_ACHIEVEMENT_110_NAME:0 "世界の穀倉地帯"
