--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -22,7 +22,7 @@
  ai_nation:0 "AI制御"
  OWN_DYNASTY:0 "自国の王朝"
  LOCAL_DYNASTY:0 "地方王朝"
- CV_TOTAL_PROVINCES:0 "§Y$VAL$§!州を所有しています"
+ CV_TOTAL_PROVINCES:0 "§Y$VAL$§!州を領有しています"
  LEDGER_TRADE_COUNTRIES_TITLE:0 "国別交易比較"
  LEDGER_TC_TRADE_EFF:0 "効率"
  LEDGER_TC_TRADE_RANGE:0 "距離"
@@ -56,7 +56,7 @@
  AUTO_DUE_TO_CAPITAL:0 "首都のある州の自治率を§Y$VAL$%§!より高くすることはできません。"
  AUTONOMY_ALREADY_INCED:0 "自治率は最近増加したため、$UNTIL|Y$まで変更できません。"
  AUTONOMY_ALREADY_DECED:0 "自治率は最近減少したため、$UNTIL|Y$まで変更できません。"
- AUTONOMY_NOT_OWNED:0 "所有していない州の自治率を変更することはできません。"
+ AUTONOMY_NOT_OWNED:0 "領有していない州の自治率を変更することはできません。"
  AUTONOMY_AT_WAR:0 "戦争中、自治率を減少させることはできません。"
  AUTONOMY_NOT_CONTROLLED:0 "支配していない州で、自治率を変更することはできません。"
  AUTONOMY_INC_NO_EFFECT:0 "最大値が§Y$MAX$%§!のため自治率を増加させても効果はありません。"
@@ -420,7 +420,7 @@
  LIB_FROM_OVERLORD:0 "§Y$OVERLORD$§!における戦争疲弊のため、$CHANGE$\n"
  LIBERTY_DESIRE_PLAIN:0 "独立欲求"
  LIBERTY_DESIRE:1 "$COUNTRY$の独立欲求：$VAL$"
- LIBERTY_DESIRE_FROM_TEMP:1 "イベント、州の離反、宗主国により開発された州：$VAL$"
+ LIBERTY_DESIRE_FROM_TEMP:1 "イベントや州の離反、宗主国による州の開発：$VAL$"
  LIBERTY_DESIRE_FROM_TARIFFS:0 "関税：$VAL$"
  LIBERTY_DESIRE_FROM_ROYAL_MARRIAGE:0 "§Y$OVERLORD$§!との王室間の婚姻：$VAL$"
  LIBERTY_DESIRE_FROM_SAME_DYNASTY:0 "§Y$OVERLORD$§!と同じ支配王朝：$VAL$"
@@ -1762,16 +1762,16 @@
  tyw_events.33.d:0 "海峡の支配によってバルト海交易で有利な地位を築いているのにも関わらず、デンマーク人はこれをさらに拡大しようとする欲に負けてしまったようだ。カルマル同盟時代から免除されてきた海峡税が、スウェーデン船舶からも徴収されると通告された。これは既に重大な問題となっているようで、一部の顧問はこの深刻な侮辱を起因とした戦争を始めることを提案している。"
  tyw_events.33.a:0 "デンマークの悪魔め！"
  tyw_events.34.t:0 "ポーランドの請求権への支持をオスマンに求める"
- tyw_events.34.d:0 "我々は可能性のある時代を生きており、我が国はその国境を拡大し始めている。神聖ローマ帝国とオスマン帝国の両者に近いキリスト教とムスリム世界の端に生まれたことで、我々はつながりを賢明に保つ必要がある。トルコ人との良好な外交関係を維持しているため、我々はポーランドの土地への侵略を準備し、我々自身のためにそれらへの主張を行うため、彼らの支持を活用することができる。"
+ tyw_events.34.d:0 "我々は可能性のある時代を生きており、我が国はその国境を拡大し始めたばかりである。キリスト教世界とムスリム世界のはざまに生まれ、神聖ローマ帝国とオスマン帝国の両者に近い我々は、そのつながりを賢明に利用して存続する必要がある。トルコ人との良好な外交関係を維持することで、彼らの支持を活用し、我々はポーランドの土地への侵攻を準備し、そこが我々のものだと主張することができる。"
  tyw_events.34.a:0 "時が来た。これはチャンスだ。"
- tyw_events.34.a.tt:0 "オスマンが同意すれば、1週間後には我々は近隣のポーランドの州の請求権を持っているでしょう。"
+ tyw_events.34.a.tt:0 "オスマンが同意すれば、1週間後には我々は隣接するポーランドの州の請求権を持っているでしょう。"
  tyw_events.34.b:0 "トランシルヴァニアはポーランド人に害を与えることを望まない。"
  tyw_events.35.t:0 "トランシルヴァニアはポーランドの請求権への支持を求める"
- tyw_events.35.d:0 "トランシルヴァニアの[From.Monarch.GetName]は、彼らがポーランドの侵略を考えているという知らせを送ってきた。我々が彼らの隣国が弱体化しているのを見て恩恵を受けると信じ、彼らはこの土地を主張することに対する、我々の暗黙の支持を望んでいる。"
+ tyw_events.35.d:0 "トランシルヴァニアの[From.Monarch.GetName]は、彼らがポーランドの侵略を考えているという知らせを送ってきた。隣国が弱体化することが我々の恩恵になると考え、彼らはこの土地を主張することに対する、我々の暗黙の支持を望んでいる。"
  tyw_events.35.a:0 "素晴らしい取り組みだ。"
  tyw_events.35.b:0 "このような作戦には何の意味もない。"
  tyw_events.36.t:0 "宗教的抑圧からハンガリーは自由だ"
- tyw_events.36.d:1 "神聖ローマ帝国における連盟の形成は、国家はただ黙って座っているだけではなく、信仰の人々が神を信じない支配者の下で苦しむことを許さない時代に生きていることを明らかにした。我々の国境からさほど離れていない、ハンガリーの[Root.Religion.GetName]教徒たちは、まったく容認できない状況にある。我が国は、ハンガリーと法的に、精神的に強い結びつきがあり、これを続けさせることはできない。彼らを解放して土地を取り戻す時が来ており、[Root.Religion.GetName]の血が再びその上に流されることはない。"
+ tyw_events.36.d:1 "神聖ローマ帝国における連盟の形成は、信仰ある民衆が神をも畏れぬ支配者の下で苦しむことを国家が許さず、ただ黙って座っているだけではない時代に我々が生きていることを明らかにした。我々の国境からさほど離れていない、ハンガリーの[Root.Religion.GetName]教徒たちは、まさにそのようなまったく容認できない状況にある。我が国は、法律的にも、精神的にもハンガリーと強い結びつきがあり、これを続けさせることはできない。[Root.Religion.GetName]の血が再びその地に流されることがないよう、彼らを解放して土地を取り戻す時だ。"
  tyw_events.36.a:0 "トランシルヴァニアはハンガリー人の側に立つ。"
  tyw_events.37.t:0 "トランシルヴァニアの黄金時代"
  tyw_events.37.d:0 "我が国は、現在の形となって以来、おそらく最良の時代を見ている。[Root.Monarch.GetName]は非常に有能な[Root.Monarch.GetTitle]であることが証明されており、[Root.Capital.GetCapitalName]を文化的で印象的な都市にするための投資が行われている。我々は今後10年間、全国に建築と教育を広め、平和と繁栄の時代が続くことを願っている。"
@@ -1781,13 +1781,13 @@
  tyw_events.38.a:0 "心だけではなく魂が結びつかなければ、真の信頼は得られない。"
  tyw_events.38.b:0 "もっと世俗的な外交のほうが良いのかもしれない。"
  tyw_events.39.t:0 "神はスペイン語を話す"
- tyw_events.39.d:0 "神聖ローマ帝国の宗教的状態をめぐる我々の進行中の戦争は順調に進んでいる。宗教的目標を達成するための我々の努力を見てからの楽観主義は、我々の大臣の一人の、神はスペイン語を話し、最近我が国のために戦っているという宣言により、特に精神的な形を取っている。問題が我々の目標に向け進み続ければ、敵でさえ、これに真実があることを認めなければならないかもしれない。"
+ tyw_events.39.d:0 "神聖ローマ帝国の宗教状態をめぐる現行の戦争は順調に進んでいる。宗教的目標を達成する我々の努力を見た者たちの楽観主義は、特に精神的な形を成しており、ある修道会会長は「神はスペイン語を話されており、最近我が国のために戦っておられる」と宣言している。このまま我々の思うように事が運べば、敵でさえもこの言葉には真実があると認めざるを得なくなるかもしれない。"
  tyw_events.39.a:0 "味方の兵士たちはこれ以上何を求めることがある？"
  tyw_events.40.t:0 "神は平和を望んでおられる"
  tyw_events.40.d:0 "神聖ローマ帝国の宗教状態をめぐる我々の進行中の戦争はうまくいっていない。宗教がこの紛争の核心であるため、かつて連盟に加わることを決めたとき、神が我々と共におられたと主張してきた人々の多くは、神が我々から戦争の手段を奪い、我々に対して平和を望んでおられると主張している。現在の起こっている出来事に対する唯一の解釈とは言い難いが、戦争に勝つことができるかどうかの疑念を増すには十分な時間があった。"
  tyw_events.40.a:0 "疑念を増すような信仰は不信仰である。"
  tyw_events.41.t:0 "物々交換の増加"
- tyw_events.41.d:0 "[Root.GetAdjective]の通貨の貧しい状況は、我々にとってさらに厄介になってきているが、一般の人々は他の解決策を求めるようになった。多くの人々が可能な限り、通貨の利用に慎重になり、回避し、物々交換のような古い交易手段に戻している。あるいは彼らの懸念は間違っているかもしれないが、我々が迅速に行動しなければ、経済と国家そのものへの支配を失う可能性がある。"
+ tyw_events.41.d:0 "[Root.GetAdjective]の通貨の貧弱な状況は、我々にとってさらに厄介になってきている一方で、庶民は他の解決策を求めるようになった。多くの人々が通貨の利用を警戒し、可能な限り回避し、物々交換のような古い交易手段に回帰しつつある。おそらく彼らの懸念は間違っているのだろうが、もし我々が迅速に行動しなければ、経済と国家そのものへの支配を失う可能性がある。"
  tyw_events.41.a:0 "我々が問題を統制するまで、これがうまくいくことを期待しよう。"
  tyw_events.41.b:0 "あらゆる手段でこれを止めるため、最良の経済の専門家の助言を求めよう。"
  tyw_events.42.t:0 "スペイン財宝艦隊を拿捕"
@@ -1798,13 +1798,13 @@
  tyw_events.43.d:0 "一隻ずつ、スペイン財宝艦隊の船は拿捕され、その多くは不意を付かれ、いくつかは罠に落ち、我々に対して果敢に攻撃を行う準備はできていなかった。一部の船が事前に警告を受けていたにもかかわらず、拿捕された船からの貨物は、数年ではないにしても数ヶ月間、我々の経済を押し上げるだろう。私掠船は英雄として[Root.Capital.GetCapitalName]に帰還した。我々は、このように成功した拿捕を再び見ることはほとんどないだろう。"
  tyw_events.43.a:0 "それでも、一度でも見ることができたのは喜びだった。"
  tyw_events.44.t:0 "オランダ人に拿捕されたスペイン財宝艦隊"
- tyw_events.44.d:0 "遠くの植民地から交易品を母国に持ち帰るのに長い間苦労してきたオランダの私掠船は、最近、同じように、スペインの港へ向けて銀と金を母国に持ち帰るため出発した財宝艦隊を直接攻撃した。いくつかの船は襲撃を避けるために準備され、管理されていとはいえ、我々にとって高くつくものではなかった。オランダがどのようにこの対価を支払うことになるかはまだ決まっていないが、彼らは確実に代償を支払うことになるだろう。"
- tyw_events.44.a:0 "金、銀、血はすべて許容できる通貨だ。"
+ tyw_events.44.d:0 "遠くの植民地から交易品を母国に持ち帰る我々の苦労の原因たるオランダ人の私掠船が、最近、母国スペインへ金銀を持ち帰るべく出航した直後の財宝艦隊を直接攻撃した。襲撃に備えていた一部の船は難を逃れたが、そうでなかった船は大きな犠牲を強いられた。オランダ人が何をどのようにこの代償を支払うかはまだ決まっていないが、支払うことは確実だ。"
+ tyw_events.44.a:0 "金、銀、そして血はすべて通貨として認められる。"
  tyw_events.45.t:0 "教育を受けた[Root.Monarch.GetTitle]"
- tyw_events.45.d:0 "摂政が[Root.Monarch.GetHerHim]を我々が望むように[Root.Monarch.GetTitle]として統治のための準備をしていた間、[Root.Monarch.GetName]の養成は進んでいた。それを提供した顧問は、[Root.Monarch.GetWomanMan]の知恵と動機において、[Root.GetName]を支配する永続的な遺産を残したことを誇りに感じている。"
+ tyw_events.45.d:0 "摂政時代に[Root.Monarch.GetHerHim]が受け育った教育は、[Root.Monarch.GetTitle]として統治するための準備であり、まさに我々が望んでいたものである。それを提供した顧問は、[Root.GetName]を統治する[Root.Monarch.GetWomanMan]の知恵と動機に、永続的な遺産を残したことを誇りに感じている。"
  tyw_events.45.a:0 "きっと大丈夫だろう。"
  tyw_events.46.t:0 "[From.Capital.GetCapitalName]で勝利！"
- tyw_events.46.d:0 "連盟戦争は我々を、敵の一つの遠い首都にまで導いた。彼らの国家の中心を襲撃したことで、我々は彼らの大きな恥に対して勝利した。関与した多くの熟練した兵士のうち、特に一人は勝利に貢献したことで賞賛され、騒乱の間に並外れた落ち着きと素早い思考を示したことで、将軍の地位へと昇進した。"
+ tyw_events.46.d:0 "連盟戦争の結果、我々は敵国の一つの首都に到達した。彼らの国家の中心を襲撃したことで、我々は勝利し、大いなる恥辱を与えた。多くの熟練した兵士が関係した中で、特に勝利に貢献した一人の兵士が賞賛され、騒乱の中で並外れた冷静さと迅速な思考を発揮したことで、将軍の地位へと昇進した。"
  tyw_events.46.a:0 "彼はまだ多くの国の心に恐怖を植え付けるかもしれない。"
  tyw_events.47.t:0 "我々の防衛の準備"
  tyw_events.47.d:0 "[Root.GetName]は攻撃を受けているが、敵は今のところ我々の土地に侵入するには、まだ非常に遠くを進んでいる。我々の軍の戦略家は、最も必要とされる場所で防御を強化することを提案している。しかし、彼らはそれがどこであるかについての評価を得るために、[Root.Monarch.GetName]に頼っている。我々が首都の支配権を失うわけにはいかないことは確かだが、最初に国境を強化することは最良かもしれない。"
