--- a/source/localisation/decisions_l_english.yml
+++ b/source/localisation/decisions_l_english.yml
@@ -180,13 +180,13 @@
  cossack_nation_desc:0 "我々は先祖の伝統に忠実に、コサックの方法で国家を支配しなければなりません！"
  become_indian_sultanate_title:0 "スルタン国のインド化"
  become_indian_sultanate_desc:0 "インドのムスリム・スルタン国家として大きく繁栄したいならば、伝統的なムスリム王政の考えを進化させ、拡大せねばならない。我々はイスラム国家のままである一方で、ズィンミーの役割はダルマ宗教にも及ぶだろう。"
- unite_japan_subject_tooltip:1 "日本のすべての従属大名は独立します。\n我々は従属大名が所有する州にあるすべての§Y中核州§!を失います。\n日本のすべての従属大名：\n§Y大名§!政府改革が廃止されます！"
+ unite_japan_subject_tooltip:1 "日本の従属大名がすべて独立します。\n我々は従属大名が領有する州にあるすべての§Y中核州§!を失います。\n日本のすべての従属大名：\n§Y大名§!政府改革が廃止されます！"
  curtail_prussian_confederation_title:0 "プロイセン同盟の縮小"
  curtail_prussian_confederation_desc:0 "手に負えない状況に陥らないよう、プロイセン同盟を終わらせねばならない。宥和政策か抑圧政策かどちらが正しい道かを決断せねばならない。"
  curtail_prussian_confederation.tooltip:0 "§Yプロイセン同盟が我々に対して立ち上がることはないでしょう。§!"
  restore_mongol_empire_title:0 "モンゴル帝国の復興"
  restore_mongol_empire_desc:0 "チンギス・ハーンの帝国は崩壊し、多くの国家に分裂した。大ハーンの征服を再現することにより、彼の遺産を復元せねばならない。我々はモンゴル帝国を取り返すだろう！"
- mongolia_decision_tooltip:0 "§Y[Root.GetName]§!がモンゴル地方の植民地化された州を全て領有する。"
+ mongolia_decision_tooltip:0 "§Y[Root.GetName]§!がモンゴル地方の植民地化された州をすべて領有する。"
  restore_ilkhanate_decision_march_title:0 "イルハン朝の復興"
  restore_ilkhanate_decision_march_desc:0 "大カンがはるか昔にしたように、我々は広大な帝国を支配する負担を軽減するため、ペルシアを下位のカンに委任すべきである。"
  restore_ilkhanate_decision_title:0 "イルハン朝の再建"
@@ -198,7 +198,7 @@
  por_flee_to_brazil_title:0 "ブラジルへ逃亡"
  por_flee_to_brazil_desc:0 "ポルトガルは荒廃している！敵が再び我々に襲いかかる前に君主と王室は急いで海外に行かねばならない。ポルトガルをあとにすることは切ないだろうが、きっとブラジルに栄光の新帝国を築くだろう。"
  brazil_move_capital_tooltip:0 "もし領有していれば首都はリオ・デ・ジャネイロに、そうでない場合はブラジル植民地域の州にランダムで移動します。"
- brazil_provinces_tooltip:0 "ブラジル植民地域に首都を持つ植民地の従属国が、少なくとも20の州を所有する。"
+ brazil_provinces_tooltip:0 "ブラジル植民地域に首都を持つ植民地従属国が、20州以上を領有する。"
  brazil_portugal_tooltip:0 "ポルトガルはブラジルの下で同君連合の下位国として解放されます。"
  lower_black_flag_decision_title:0 "黒旗を降ろす"
  lower_black_flag_decision_desc:0 "海賊人生を終わらせ、より安定した共和国を設立するために腰を据える時が来た。"
