--- a/source/localisation/diplo_reasons_l_english.yml
+++ b/source/localisation/diplo_reasons_l_english.yml
@@ -311,7 +311,7 @@
  DIPLO_PROVINCE_PRICE:0 "価格："
  DIPLO_PROVINCE_CORE:0 "$PROV$は$WHO$の中核州："
  DIPLO_PROVINCE_CLAIM:0 "$PROV$は$WHO$が請求している："
- DIPLO_PROVINCE_NO_STRATEGIC_INTEREST:0 "$PROV$は中核州ではなく、請求権も無く、かつて$WHO$が所有していた土地でもない："
+ DIPLO_PROVINCE_NO_STRATEGIC_INTEREST:0 "$PROV$は中核州ではなく、請求権も無く、かつて$WHO$が領有していた土地でもない："
  DIPLO_PROVINCE_SAME_RELIGION:0 "$PROV$と$WHO$は$RELIGION$である："
  DIPLO_NOT_NEIGHBOURS:0 "隣国ではない："
  DIPLO_SELLPROV_NEIGHBOUR_AND_PRICE:0 "$PROV$は$WHO$に隣接しており、価格は$VAL$だ："
