--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -486,7 +486,7 @@
  fra_aligned_with_pope_tt:0 "ミッション§Yアヴィニョン侯爵領§!にて§Y聖父§!に対して§Y融和§!ルートを選んだ"
  fra_3_tolerance_heretics:0 "異端の寛容度が§G3§!以上"
  fra_canada_subject_gets_reward_tt:1 "§Y条件§!を満たした§Y従属国§!がランダムに選択され、§Y20§!年間「§Yフランス系カナダ人開拓者§!」を獲得し、以下の効果を得ます：\n 植民者：§G+1§!\n植民完了時に £adm£ £dip£ £mil£ の開発度がそれぞれ§Y+1§!"
- fra_coastal_cot_level_3_marketplace_estuary_tt:0 "\n以下の条件に全て合致する§Yインド圏§!にある州を領有してミッションを達成した場合、報酬を獲得します：\n - §Y交易§!系の建物がある\n - §Y河口§!がある\n - レベル§Y3§!の交易中心地がある\n - 基本生産が§Y15§!以上\n"
+ fra_coastal_cot_level_3_marketplace_estuary_tt:0 "\n以下の条件に全て合致する§Yインド圏§!にある州を領有してミッションを達成した場合、報酬を獲得します：\n - §Y交易§!系の建物がある\n - §Y河口§!がある\n - レベル§Y3§!の交易中心地がある\n - 基本生産が§Y15§!以上\n"
  fra_appanage_dev_tt:0 "\n全ての§Yアパナージュ§!従属国は首都に開発度をランダムに§G1§!獲得する"
  fra_20rf_per_adm:0 "\n毎月の£adm£ につき政府改革進捗度§Y20§!を獲得します"
  fra_subject_haiti_gains_following_tt:0 "\n§Yカリブ海§!にあるランダムな§Y植民地従属国§!は以下の報酬を獲得します："
@@ -497,7 +497,7 @@
  fra_claim_coastal_dutch_provinces_tt:0 "\n§Yフランス§!は、§Y低地諸国§!地方の沿岸州すべてに恒久的な請求権を獲得します"
  fra_upgrade_shipyard_tt:0 "[87.GetName]に§Y造船所§!か§Y大造船所§!がある状態でミッションを達成した場合、追加報酬を獲得"
  fra_relations_with_sco_hsc_tt:0 "@SCO スコットランドか @HSC ゲールのいずれかとの親善によってミッションを達成した場合："
- fra_dutch_cloth_manufactories_tt:0 "自国が領有する§O低地地方§!で交易品が§Y布地§!である沿岸州すべてで以下を獲得します："
+ fra_dutch_cloth_manufactories_tt:0 "自国が領有する§O低地諸国§!で交易品が§Y布地§!である沿岸州すべてで以下を獲得します："
  fra_if_complete_with_holland_40_dev:0 "\n[97.GetName]の開発度が§Y40§!以上ある状態でミッションを達成した場合、さらに以下の報酬も獲得します："
  fra_raise_londres_tower_tt:0 "\n§Yロンドン塔§!が自国の§Y絶対主義値§!および§Y革命熱§!への補助的な恩恵を付与します"
  fra_enabling_parliamentarism_extra_bonus_tt:1 "§Y議会§!の議席を割り当てると、政府改革進捗度を§G5§!、およびランダムな君主力を§G10§!獲得します。"
@@ -685,7 +685,7 @@
  as_long_as_we_stay_allies_desc:0 "同盟を続けている限り"
  mng_5_mandate_per_ally_tt:0 "§Y同盟§!1ヶ国につき帝国の天命を§Y5§!獲得する"
  mng_25_mp_per_ally_tt:0 "§Y同盟§!1ヶ国につき§Y25§! £adm£ £dip£ £mil£ を獲得する"
- mng_all_hordes_pacified_tt:1 "隣接する全遊牧民：\n自国と以下の条件のいずれかを満たす：\n同盟国もしくは従属国\n以下の条件のいずれかを満たす：\n - 独立欲求が25%未満\n - 朝貢相互作用で貢物を受けたことがある\n - 我々への評価が150以上"
+ mng_all_hordes_pacified_tt:1 "隣接する全遊牧民：\n自国と以下の条件のいずれかを満たす：\n同盟国もしくは従属国\n以下の条件のいずれかを満たす：\n - 独立欲求が25%未満\n - 朝貢相互作用で貢物を受けたことがある\n - 我々への評価が150以上"
  mng_if_completed_via_diplomacy_tt:0 "外交によってミッションを完了した場合："
  mng_if_completed_via_conquest_tt:0 "\nもしくは、征服によってミッションを完了した場合："
  mng_enable_tribes_estate_tt:0 "§Y部族§!階級を有効化"
@@ -2026,7 +2026,7 @@
  fiqh_laws_reform_desc:0 "フィクフとは、原典から抽出されたイスラームの裁定の知識のことである。その発展形として、フィクフ法はクルアーンの掟を我々独自の法規範に成文化したものとなっている。"
  sufism_decree_reform:0 "スーフィズム勅令"
  sufism_decree_reform_desc:0 "スーフィズムは、イスラムの精神的および儀式的な性格に完全に焦点を当てた一連の実践と思考方法である。その多くの伝統と影響力は、自政府内にも影響を及ぼしている。"
- mechanic_same_religion_subject_bonus_yes:1 "我々の宗教に従う属国、辺境伯およびエヤレトは、真の信仰州の人的資源§G+25.0%§!、国家水兵補正§G+25.0%§!、生産効率§G+15.0%§!されます。"
+ mechanic_same_religion_subject_bonus_yes:1 "我々の宗教に従う属国、辺境伯およびエヤレトは、真の信仰州の人的資源§G+25.0%§!、国家の水兵補正§G+25.0%§!、生産効率§G+15.0%§!されます。"
  mechanic_unlock_ottoman_holy_orders_yes:0 "§Yスンナ§!と§Yイバーディ§!で§Yメヴレヴィー§!騎士団が解禁されます\n§Yシーア§!と§Yイバーディ§!で§Yベクタシュ§!騎士団が解禁されます"
  same_religion_subject_bonus_mod:0 "フィクフ法"
  war_economy_reform:0 "戦時経済"
@@ -2221,7 +2221,7 @@
  force_issue_through_title:0 "議題の強制通過"
  force_issue_through_desc:0 "[Root.GetParliamentOrFallbackName]の決断過程は遅い。しかし、[Root.Monarch.GetName]にとって時間は重要だ。[Root.GovernmentName]の支配権により、[Root.Monarch.GetName]は[Root.GetParliamentOrFallbackName]での議題に関して強制賛同を決定できる。"
  mechanic_can_elect_from_relative_yes:0 "支配王朝から統治者を選出できます。"
- mechanic_reform_progress_from_advisors_yes:0 "統治顧問は1レベルあたり政府改革進捗度を§G+3.0%§!与えてくれます"
+ mechanic_reform_progress_from_advisors_yes:0 "統治顧問は1レベルあたり政府改革進捗度の増加を§G+3.0%§!"
  mechanic_parliament_seat_bonus_yes:0 "議会の議席を授与することで、§Y全て§!の階級の忠誠を§G1%§!増加させます\n議会の議席は毎月、州の荒廃度を§G-0.5%§!、州の自治率を§G-0.02§!減少させます。"
  mechanic_can_establish_trade_protectorates_yes:0 "§Y交易保護国§!を設立可能"
  mechanic_weaker_russian_ability_yes:0 "\n§Y効力が軽減されたロシア固有能力§!"
@@ -2279,7 +2279,7 @@
  parliament_vs_monarchy_mechanic_at:0 "§R議会派が内戦を始めるかもしれません！§!"
  parliament_vs_monarchy_mechanic_bt:0 "§R王党派が内戦を始めるかもしれません！§!"
  governmental_power:0 "絶対的権力"
- governmental_power_desc:1 "絶対的権力は、§Y[Root.GetParliamentOrFallbackName]§!に関連する行動に応じて増減します。\n\n絶対的権力が増加する行動は以下の通り：\n－議会の討論をリセットする：§Y+20§!\n－議会の議席を失う：§Y+5§!\n－議会の討論に敗北する：§Y+33§!\n\n絶対的権力が減少する行動は以下の通り：\n－議会の討論に勝利する：§Y-20§!\n－議会の議席を獲得する：§Y-5§!\n\n§Y100§!になると、以下の効果を獲得します：\n　最大絶対主義：§G+50.00§!\n　月間自治率変動：§G-0.20§!\n　国家不穏度：§R+4.00§!\n\n§Y-100§!になると、以下の効果を獲得します：\n　国家不穏度：§G-4.00§!\n　アイデアコスト：§R+10.0%§!\n　分離主義の年数：§R+10§!\n　年間絶対主義：§G+1.00§!"
+ governmental_power_desc:1 "絶対的権力は、§Y[Root.GetParliamentOrFallbackName]§!に関連する行動に応じて増減します。\n\n絶対的権力が増加する行動は以下の通り：\n - 議会の討論をリセットする：§Y+20§!\n - 議会の議席を失う：§Y+5§!\n - 議会の討論に敗北する：§Y+33§!\n\n絶対的権力が減少する行動は以下の通り：\n - 議会の討論に勝利する：§Y-20§!\n - 議会の議席を獲得する：§Y-5§!\n\n§Y100§!になると、以下の効果を獲得します：\n　最大絶対主義：§G+50.00§!\n　月間自治率変動：§G-0.20§!\n　国家の不穏度：§R+4.00§!\n\n§Y-100§!になると、以下の効果を獲得します：\n　国家の不穏度：§G-4.00§!\n　アイデアコスト：§R+10.0%§!\n　分離主義の年数：§R+10§!\n　年間絶対主義：§G+1.00§!"
  monthly_governmental_power:0 "月間絶対的権力"
  governmental_power_gain_modifier:0 "絶対的権力上昇補正"
  end_time_mechanic:0 "「終わりの時」信仰"
@@ -2299,7 +2299,7 @@
  devshirme_conscript_heathen_recruits_desc:0 ""
  ability_ottoman_decadence_mechanic:0 "退廃メーター"
  ottoman_decadence:0 "退廃"
- ottoman_decadence_desc:1 "退廃とは、あなたの支配者の手の中にどれだけの実権があるのか、そして自国の現状がどのくらい承認されたものであると考えられているかを示す指標です。自領域の退廃がひどいほど、国家を維持し、他の大国に遅れをとらないようにすることが難しくなっていきます。\n\n退廃は以下の要因で増加します：\n - 平時\n - 不忠なイェニチェリとイェニチェリが領有する直轄地\n - 負の安定度\n - 汚職\n - 領土管理限界の超過\n - 従属国独立欲求の平均\n - 自治率の平均\n - [Root.Monarch.GetTitle]を指揮官とする戦いで敗北\n\n退廃は以下の要因で減少します：\n - 絶対主義\n - 階級議題の達成\n - [Root.Monarch.GetTitle]を指揮官とする戦いで勝利\n - 正の安定度\n\n退廃が§R100§!になると、国難§R権力闘争§!が発生します。"
+ ottoman_decadence_desc:1 "退廃とは、あなたの支配者の手の中にどれだけの実権があるのか、そして自国の現状がどのくらい承認されたものであると考えられているかを示す指標です。自領域の退廃がひどいほど、国家を維持し、他の大国に遅れをとらないようにすることが難しくなっていきます。\n\n退廃は以下の要因で増加します：\n - 平時\n - 不忠なイェニチェリとイェニチェリが領有する直轄地\n - 負の安定度\n - 汚職\n - 領土管理限界の超過\n - 従属国独立欲求の平均\n - 自治率の平均\n - [Root.Monarch.GetTitle]を指揮官とする戦いで敗北\n\n退廃は以下の要因で減少します：\n - 絶対主義\n - 階級議題の達成\n - [Root.Monarch.GetTitle]を指揮官とする戦いで勝利\n - 正の安定度\n\n退廃が§R100§!になると、国難§R権力闘争§!が発生します。"
  ability_perfectionism_mechanic:0 "完璧主義の仕組み"
  inward_focus:0 "国内重視"
  inward_focus_desc:0 ""
@@ -2320,7 +2320,7 @@
  PERFECTIONISM_POLICY:0 "完璧主義の注力"
  ability_russian_modernization_mechanic:0 "近代化システム"
  russian_modernization:0 "近代化"
- russian_modernization_desc:0 "近代化は、国家内やあなたの社会への近代的な考え方の広がりを測るものです。\n\n近代化は以下の要素によって増加します：\n - [Root.Culture.GetGroupName]でない顧問の雇用\n - 知識の共有を受ける\n - 任意の技術で時代を先行する\n - 統治者の統治スキル\n - 近代的アイデアの盗用や購入\n\n近代化は以下の要素によって低下します：\n - 負の安定度\n - 汚職\n - インフレ\n - 破産\n - 階級特権"
+ russian_modernization_desc:0 "近代化は、国家内やあなたの社会への近代的な考え方の広がりを測るものです。\n\n近代化は以下の要素によって増加します：\n - [Root.Culture.GetGroupName]でない顧問の雇用\n - 知識の共有を受ける\n - 任意の技術で時代を先行する\n - 統治者の統治スキル\n - 近代的アイデアの盗用や購入\n\n近代化は以下の要素によって低下します：\n - 負の安定度\n - 汚職\n - インフレ\n - 破産\n - 階級特権"
  ability_russian_rule_mechanic:0 "ロシア専政"
  russian_administrative_rule:0 "統治支配"
  russian_diplomatic_rule:0 "外交支配"
@@ -2347,7 +2347,7 @@
  system_of_councils_mechanic_desc:0 "評議会体制はスペイン王国において、遠隔地の異なる領土を目的別・地域別の評議会で組織された複雑な官僚機構によって統治できるようにするために開発されたものである。この体制は「官僚王」として知られるフェリペ2世の治世において最盛期を迎えた。"
  royal_council_interaction:0 "王室評議会の召集"
  royal_council_interaction_desc:0 ""
- royal_council_interaction_tooltip:0 "§Y10年間§!、以下の補正のうち1つを選択できます：\n§Y判事評議会§!：\n　有効な顧問：§G+1§!\n　顧問コスト：§G-10.0%§!\n\n§Y財政評議会§!：\n　年間インフレ減少：§G-0.05§!\n　金利：§G-1.00§!\n\n§Y異端審問評議会§!：\n　宣教師：§G+1§!\n　異端に対する布教強度：§G+2.0%§!"
+ royal_council_interaction_tooltip:0 "§Y10年間§!、以下の補正のうち1つを選択できます：\n§Y判事評議会§!：\n　利用可能な顧問：§G+1§!\n　顧問コスト：§G-10.0%§!\n\n§Y財政評議会§!：\n　年間インフレ減少：§G-0.05§!\n　金利：§G-1.00§!\n\n§Y異端審問評議会§!：\n　宣教師：§G+1§!\n　異端に対する布教強度：§G+2.0%§!"
  state_council_interaction:0 "国家評議会の召集"
  state_council_interaction_desc:0 ""
  state_council_interaction_tooltip:1 "§Y10年間§!、以下の補正のうち1つを選択できます：\n§Yヨーロッパ評議会§!：\n　外交評判：§G+2.00§!\n\n§Y地中海評議会§!：\n　ガレー船の戦闘能力：§G+15.0%§!\n\n§Yインド評議会§!：\n　国家の入植者の増加：§G+15.0%§!\n　別大陸の独立欲求減少：§G-10.00%§!"
@@ -2425,7 +2425,7 @@
  tur_the_bospborus_control_at:0 "このミッションの条件は、前ミッションのイベント「§Y[Root.GetAdjective]・ヴェネツィア交易協定？§!」における選択で決まります。\n交易協定が有効な場合、このミッションは以下の条件を満たすことで達成できます：\n- 以下のいずれかが満たされている：\n　- §Yヴェネツィア§!が存在していない\n　- §Yヴェネツィア§!の§Y[Root.GetName]§!に対する評価が§Y190§!以上である。\n　- §Yコンスタンティノープル§!で§Yヴェネツィア§!が最大の交易力を持つ。\n"
  tur_the_bospborus_control_bt:0 "ただし、交易取引を締結しなかった、もしくは交易取引が破棄された場合、以下の条件が必要です："
  tur_the_bospborus_control_ct:1 "§Yヴェネツィア§!と貿易取引をしている状態でこのミッションを達成した場合："
- tur_the_bospborus_control_dt:1 "このイベントでは、交易協定を再考し、以下のいずれかを選択することができます：\n - 「§Y交易協定を拡大する§!」は、自国の交易首都ノードの交易力を増やす代わりに、州の§G交易品生産§!ボーナスを増やす\n - 「§Y現状を維持する§!」は直ちに§G3年分の収入§!を与えます\n - 「§Y交易協定を終わりにする§!」は§Y交易協定補正§!を取り除き、§Yヴェネツィア§!との同盟を終了させるが、以下の効果を与えます："
+ tur_the_bospborus_control_dt:1 "このイベントでは、交易協定を再考し、以下のいずれかを選択することができます：\n - 「§Y交易協定を拡大する§!」は、自国の交易首都ノードの交易力を増やす代わりに、州の§G交易品生産§!ボーナスを増やす\n - 「§Y現状を維持する§!」は直ちに§G3年分の収入§!を与えます\n - 「§Y交易協定を終わりにする§!」は§Y交易協定補正§!を取り除き、§Yヴェネツィア§!との同盟を終了させるが、以下の効果を与えます："
  tur_establish_the_pashas_title:0 "パシャの設立"
  tur_establish_the_pashas_desc:0 "パシャの称号は、政治制度および軍事制度における高位の文官職であり、知事や将軍に授与される。我が帝国が成長するにつれ、新たなパシャの任命は、征服した領土を維持し統治するために極めて重要だ。"
  tur_improved_pashas_ct:1 "§Y[Root.Culture.GetGroupName]§!文化グループに属さない州の§Yパシャ§!による最小州内自治率増加を§Y+10.00§!に減少させます。"
@@ -4314,8 +4314,8 @@
  rus_book_of_royal_degrees_at:0 "このイベントでは、§Y統治§!、§Y商業§!、§Y軍事§!に関連する国家ボーナス3つのうちから1つを選択できます。"
  rus_handle_the_boyars_title:0 "ボヤールの掌握"
  rus_handle_the_boyars_desc:0 "ボヤールは我々の国に対して大きな影響力を持っている。我々の未来は、ボヤールたちの懐柔にかかっているのだ。彼らの忠誠心を得るか、彼らの力を弱めるか、いずれにせよ、ボヤールには手を出さなければならない。"
- rus_handle_the_boyars_at:1 "§Y[Root.GetNobilityName]§!が我々よりも少ない土地を所有している状態でこのミッションを達成したとき："
- rus_handle_the_boyars_bt:1 "§Y[Root.GetNobilityName]§!が我々よりも多くの土地を所有している状態でこのミッションを達成したとき："
+ rus_handle_the_boyars_at:1 "§Y[Root.GetNobilityName]§!の直轄地が我々よりも少ない状態でこのミッションを達成したとき："
+ rus_handle_the_boyars_bt:1 "§Y[Root.GetNobilityName]§!の直轄地が我々よりも多い状態でこのミッションを達成したとき："
  rus_the_mestnichestvo_title:0 "門地制の廃止"
  rus_the_mestnichestvo_desc:0 "[Root.GetUsableName]の階層構造は門地制に基づいている。この構造は過度に複雑で時代遅れであり、実力に基づく公的地位の選択を妨げている。我々の社会の毒であり、廃止しなければならないだろう。"
  rus_show_russian_superiority_title:1 "国家の近代化"
@@ -4868,7 +4868,7 @@
  gbr_explore_new_world_desc:0 "静かな囁きは、成長のために熟し、想像を絶する脅威に満ちた、神秘的な土地についての物語を遠い西洋に伝えている。これが真実なら、それは我々のものとなるべきだ。"
  gbr_colonize_canada_title:0 "カナダへの入植"
  gbr_colonize_canada_desc:0 "南の地より寒く厳しいにもかかわらず、カナダの領土は開拓の機が熟している。雪山には風変わりな毛皮や木材、鉱物が豊富にある。"
- gbr_colonize_canada_ct:0 "§Yカナダ植民地§!植民地域の州で完全に植民地化された州を§Y10§!州以上§Y[Root.GetName]§!もしくはその従属国で領有する。"
+ gbr_colonize_canada_ct:0 "§Y[Root.GetName]§!あるいはその従属国が、§Yカナダ植民地§!植民地域に完全に植民地化された州を§Y10§!州以上領有する。"
  ENGLISH_FUR_TRADE:0 "イングランドの毛皮交易"
  gbr_seize_ceylon_title:1 "[Root.GetPreviewColorGBR]セイロン島の奪取[Root.GetPreviewColorGBR_end]"
  gbr_seize_ceylon_desc:0 "セイロンはインド付近にある島で、インド洋の交易確保に大いに役立つ。我が宿敵はインドや香辛料の島々との交易が儲かることに気づいており、セイロン島を占領しようと目論んでいる。これを許してはならない。"
@@ -4887,7 +4887,7 @@
  gbr_rule_britannia_at:0 "議会アクションを通じて補正のレベル上昇を獲得します。"
  gbr_colonize_north_america_title:1 "[Root.GetPreviewColorGBR]アメリカへの定住[Root.GetPreviewColorGBR_end]"
  gbr_colonize_north_america_desc:0 "アメリカの土地は多くのものにとって適しているようだ。北部においては、我々は毛皮や造船材料に関する話を聞いてきた。南部においては、土地は多くの作物の栽培に適している。我々が恩恵を受けられるよう、そこに拠点を設ける必要がある。"
- gbr_colonize_north_america_at:0 "アメリカ東部植民地植民地域の州で完全に植民地化された州を§Y10§!州以上§Y[Root.GetName]§!もしくはその従属国で領有する。"
+ gbr_colonize_north_america_at:0 "§Y[Root.GetName]§!あるいはその従属国が、アメリカ東部植民地植民地域に完全に植民地化された州を§Y10§!州以上領有する。"
  gbr_dominiate_new_world_title:1 "[Root.GetPreviewColorGBR]新世界の支配[Root.GetPreviewColorGBR_end]"
  gbr_dominiate_new_world_desc:0 "この不可思議な新世界は[Root.GetAdjective]が請求権を有している。その全資源と全領土は[Root.GetAdjective]王家に帰属する。新世界の支配を確保し、生意気な自国と争う者どもを追放するのだ。"
  gbr_dominiate_new_world_at:1 "全ての§Y植民地§!従属国で生産効率 §G+50.0%§!、交易効率§G+50.0%§! を獲得します。"
@@ -5029,7 +5029,7 @@
  ENG_CLERGICAL_PRIVILEGES:0 "聖職者の特権"
  flavor_gbr.104.b:0 "やり過ぎは良くない。"
  flavor_gbr.105.b:0 "聖職者は既に十分に苦しみを受けている。"
- flavor_gbr.109.a.tt:0 "この補正が有効な限り：\n§Y顧問のタイプとスキルに応じて補正を獲得します：§!\n -§Y哲学者§!と§Y自然科学者§!\n　 - 異端の寛容度：スキルあたり§G+1.00§!\n -§Y芸術家§!\n　 - 真の信仰の寛容度：スキルあたり§G+1.00§!\n -§Y出納官§!と§Y造幣局長官§!\n　 - 宗教統一度：スキルあたり§G+15.0%§!\n -§Y異端審問官§!と§Y神学者§!\n　 - 異端に対する布教強度：スキルあたり§G+1.0%§!"
+ flavor_gbr.109.a.tt:0 "この補正が有効な限り：\n§Y顧問のタイプとスキルに応じて補正を獲得します：§!\n -§Y哲学者§!と§Y自然科学者§!\n　 - 異端の寛容度：スキルあたり§G+1.00§!\n -§Y芸術家§!\n　 - 真の信仰の寛容度：スキルあたり§G+1.00§!\n -§Y出納官§!と§Y造幣局長官§!\n　 - 宗教統一度：スキルあたり§G+15.0%§!\n -§Y異端審問官§!と§Y神学者§!\n　 - 異端に対する布教強度：スキルあたり§G+1.0%§!"
  flavor_gbr.1.t:0 "[Root.GetUsableName]の運命"
  flavor_gbr.1.desc:0 "[Root.GetUsableName][Root.GovernmentName]と[FRA.GetUsableName][FRA.GovernmentName]の関係は、百年戦争によって永遠に汚されたものとなっている。1337年にエドワード3世がフランスの王位を要求して以来、両国は常に争いを続けていた。\n戦争は最終局面を迎えており、我々の運命は、我々がヨーロッパ大陸に対しどのようなスタンスを取るかに委ねられている。"
  flavor_gbr.1.a:0 "大陸にはもう興味は無い。"
@@ -5330,7 +5330,7 @@
  eng_protects_the_clergy_prot:0 "聖職者の保護"
  desc_eng_protects_the_clergy_prot:0 "聖職者は迫害や課税圧力から守られている。"
  eng_foreign_religious_control:0 "国外からの宗教的支配"
- desc_eng_foreign_religious_control:0 "宗教の問題は現在[Root.GetClergyName]と[Root.Monarch.GetTitle]の顧問に握られています。\n\n§Y顧問のタイプとスキルに応じて補正を獲得します：§!\n -§Y哲学者§!と§Y自然科学者§!\n　 - 異端の寛容度：スキルあたり§G+1.00§!\n -§Y芸術家§!\n　 - 真の信仰の寛容度：スキルあたり§G+1.00§!\n -§Y出納官§!と§Y造幣局長官§!\n　 - 宗教統一度：スキルあたり§G+15.0%§!\n -§Y異端審問官§!と§Y神学者§!\n　 - 異端に対する布教強度：スキルあたり§G+1.0%§!"
+ desc_eng_foreign_religious_control:0 "宗教の問題は現在[Root.GetClergyName]と[Root.Monarch.GetTitle]の顧問に握られています。\n\n§Y顧問のタイプとスキルに応じて補正を獲得します：§!\n -§Y哲学者§!と§Y自然科学者§!\n　 - 異端の寛容度：スキルあたり§G+1.00§!\n -§Y芸術家§!\n　 - 真の信仰の寛容度：スキルあたり§G+1.00§!\n -§Y出納官§!と§Y造幣局長官§!\n　 - 宗教統一度：スキルあたり§G+15.0%§!\n -§Y異端審問官§!と§Y神学者§!\n　 - 異端に対する布教強度：スキルあたり§G+1.0%§!"
  eng_end_of_the_english_reformation:0 "宗教改革の終結"
  desc_eng_end_of_the_english_reformation:0 "カトリック教徒と宗教改革の一団はついに[Root.GetUsableName]の旗の下で和解した。かつて宗教によって分断された自国は現在、再び統一された。\nこの上なく素晴らしきことだ。\n\n§Y国難「宗教的混乱」が自国で発生しなくなります。§!"
  gbr_religious_stability:0 "宗教的安定"
@@ -6379,7 +6379,7 @@
  alcantara_order:0 "アルカンタラ騎士団"
  alcantara_order_desc:0 "アルカンタラ騎士団は十二世紀にレオン王国で設立され、ポルトガルやアルモハード朝との国境の前哨基地として機能していた町に仕えた。"
  spa_every_cardinal_1_tax_tt:0 "\n§Y枢機卿§!を擁するす州すべてで開発度を1£adm£獲得する。"
- spa_any_ally_tt:0 "以下の条件を満たす§Y同盟国§!が存在する：\n - 首都が§Yフランス§!地方にある\n - §Y列強§!であるか、もしくは総開発度が§Y500§!以上である\n - 我々への評価が§Y180§!以上"
+ spa_any_ally_tt:0 "以下の条件を満たす§Y同盟国§!が存在する：\n - 首都が§Yフランス§!地方にある\n - §Y列強§!であるか、もしくは総開発度が§Y500§!以上である\n - 我々への評価が§Y180§!以上"
  spa_royalist_tt:0 "\nインファンテを§Y打倒§!することでミッションを完了した場合、§Y貴族派閥主義者§!の負の効果が§G減少§!し、以下の報酬を獲得します："
  spa_infantes_tt:0 "\n一方、インファンテに§Y味方する§!選択をした場合、§Y貴族派閥主義者§!の負の効果が§R増大§!し、以下の報酬を獲得します："
  spa_recent_change_tt:0 "最近、イベント「§YSólo Madrid es corte!（マドリードだけが宮廷だ！）§!」にて首都を[217.GetName]へ遷都した"
@@ -6675,7 +6675,7 @@
  FROM_MUST_HAVE_POSITIVE_OPINION_TT:0 "§R- §Y[From.GetName]§!は§Y[Root.GetName]§!の評価が§Y0§!より高くない。§!"
  rus_increase_absolute_rule_tt:0 "階級相互作用§Y領地の接収§!を§Y10§!回以上実行している（§Y[Root.GetSeizeLandCounter]§!/§Y10§!）。"
  gbr_allies_on_the_mainland_tt:1 "- §Y[Root.Capital.GetContinentName]§!に首都がある\n　 - §Y[Root.GetName]§!に対して§Y150§!以上の評価を持つ。\n　 - §Y[POR.GetName]§!であるか、§Y200§!以上の総開発度を持つ。"
- ave_colonize_america_tt:0 "§Y[Root.GetName]§!もしくはその従属国が§Y新世界§!において完全に植民地化された州を§Y10§!州以上領有する。"
+ ave_colonize_america_tt:0 "§Y[Root.GetName]§!もしくはその従属国が、§Y新世界§!に完全に植民地化された州を§Y10§!州以上領有する。"
  jap_tt_spread_christianity:0 "\nこれにより、この事件は鮮明に§Yキリスト教§!の結末へと向かうでしょう。"
  ara_victory_over_provence_modifier:0 "プロヴァンスに対する勝利"
  desc_ara_victory_over_provence_modifier:0 "自国の宿敵に勝利した！"
