--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -722,7 +722,7 @@
  flavor_eng.EVTOPTA9124:0 "議会に対抗する"
  flavor_eng.EVTOPTB9124:0 "議会に屈服する"
  flavor_eng.EVTNAME9127:0 "航海法"
- flavor_eng.EVTDESC9127:0 "クロムウェルは、英連邦の護国卿であり、1651年に航海法を公布した。それは主にオランダの運送貿易に対して向けられたものであり、イングランドに出入りするすべての商品は英国船で輸送され、同時に植民地でもこの排他的な方針が承認された。この法律は、最初は1652－1654年に、続いて1665－1667年に英国・オランダ戦争を直接的に引き起こした。ブレダの和約（1667年）では、ニューアムステルダム（ニューヨーク）がスリナム（オランダ領ギアナ）と交換され、航海法はわずかに修正された。にもかかわらず航海法は、英国海軍および植民地貿易の巨大な成長に貢献したのだった。"
+ flavor_eng.EVTDESC9127:0 "イギリス共和国の護国卿クロムウェルは、1651年に航海法を公布した。この法律は主にオランダの中継貿易に向けられたもので、イングランド発着の商品はすべて英国船で輸送されることを規定し、同時に植民地排他政策を確認するものだった。この法律は、第一次英蘭戦争（1652〜54年）、第二次英蘭戦争（1665〜67年）の直接の原因となった。ブレダの和約（1667年）で、ニューアムステルダム（ニューヨーク）はスリナム（オランダ領ギアナ）と交換され、この法律は若干修正された。にもかかわらず、この法律はイギリス海軍と植民地貿易の大成長に貢献した。"
  flavor_eng.EVTOPTA9127:0 "制定する。"
  flavor_eng.EVTOPTB9127:0 "現在の政策で完璧だ。"
  flavor_eng.EVTNAME9129:0 "信仰寛容令と審査法"
@@ -744,7 +744,7 @@
  flavor_eng.EVTOPTA9141:0 "戦争の言い訳としてそれを利用する。"
  flavor_eng.EVTOPTB9141:0 "我々の関係があまりひどくならないようにしよう。"
  flavor_eng.EVTNAME9143:0 "ジャコバイトの反乱"
- flavor_eng.EVTDESC9143:0 "1745年、オーストリア継承戦争がヨーロッパで猛威を振るっていた。イングランドはオーストリア領の南オランダで大勢の兵士を忙しくさせていた。チャールズ・エドワード・スチュアート（1720～1788）がスコットランドに大胆に上陸するのに機は熟していると思われた。彼と彼のジャコバイト支持者は1745年10月2日にプレストンパンツで英国軍を倒し、エディンバラに入り、そこで彼は父ジェームズをスコットランドの王として認めさせた。小規模軍の指揮官として、彼はダービーまでイングランドに侵攻したが、約束されたフランスの支援が実現しなかった（フランス軍の上陸は失敗した）時、退却しなければならなかった。カンバーランド公（北海沿岸の低地帯諸国から呼び出された）が率いる英国軍に追いつかれ、1746年4月16日にカロデンで敗れた。これはスチュアートが王座を取り戻すために得た最大限の試みであったが、気の早い若い王子は将軍の冷静なアドバイスを聞いていなかったので、かくしてスチュアートの王権への主張は永遠に埋没することとなった。"
+ flavor_eng.EVTDESC9143:0 "1745年、オーストリア継承戦争がヨーロッパで猛威を振るっていた。イングランドはほとんどの軍隊をオーストリア領ネーデルラントに派遣していた。チャールズ・エドワード・スチュアート（1720～1788）が大胆にもスコットランドに上陸する機は熟したと思われた。彼とジャコバイト支持者は1745年10月2日にプレストンパンツでイングランド軍を倒し、エディンバラに入城して父ジェームズをスコットランド王として認めさせた。その後、少数の軍を率いてイングランドのダービーまで侵攻したが、約束したフランスの支援が得られず（フランス軍の上陸は失敗に終わった）、撤退を余儀なくされた。カンバーランド公（ネーデルラントから召還された）率いる英国軍に追いつかれ、1746年4月16日にカロデンで大敗した。これはスチュアート家が王座を取り戻す最大の試みであったが、猪突猛進の若き王子は将軍たちの冷静な忠告に耳を貸さず、かくしてスチュアートの大義を永遠に葬り去ることになった。"
  flavor_eng.EVTOPTA9143:0 "我々は彼らを粉砕するだろう！"
  flavor_eng.EVTOPTB9143:0 "スチュアートは王位を取り戻す！"
  flavor_eng.EVTNAME9144:0 "大ピット"
@@ -2617,8 +2617,8 @@
  flavor_bur.EVTDESC9:1 "[dutch_rebels_target.GetName]州はネーデルラント独立への反乱に参加している。"
  flavor_bur.EVTOPTA9:0 "反乱軍を抑えろ！"
  flavor_bur.EVTOPTB9:0 "地方に譲歩を与える。"
- flavor_bur.EVTNAME10:0 "オランダは独立を宣言！"
- flavor_bur.EVTDESC10:0 "何年にもわたる征服と、外国の支配が認められていることによる不公平な主張が強制された後に、我々の低地国家の州は、[Root.GetName]への宣誓を放棄し、独立を宣言した！"
+ flavor_bur.EVTNAME10:0 "低地地方が独立を宣言！"
+ flavor_bur.EVTDESC10:0 "何年にもわたる征服と、外国の支配が認められていることによる不公平な主張が強制された後に、我々の低地諸国の州は、[Root.GetName]への宣誓を放棄し、独立を宣言した！"
  flavor_bur.EVTOPTA10:0 "よくそんなことができたものだな!?"
  flavor_bur.EVTNAME11:0 "オランダの動員"
  flavor_bur.EVTDESC11:0 "国家的な情熱が新しく形成されたオランダの共和制の国々を席巻している！新たに獲得した自由を侵害しようとする人々を撃退するため、強力な陸軍と海軍が迅速に集結した！"
@@ -2626,7 +2626,7 @@
  flavor_bur.EVTDESC12:0 "新しく形成されたオランダ共和国は、ネーデルラントの地域のすべての州を組み込むことを検討しており、我々に属する州を請求している。"
  flavor_bur.EVTOPTA12:0 "よくそんなことができたものだな!?"
  flavor_bur.EVTNAME16:0 "[Root.GetName]が共和国に参加"
- flavor_bur.EVTDESC16:0 "低地国家の外からの圧制者に屈するよりも、[Root.GetName]はオランダ共和国に加わることを決断した。"
+ flavor_bur.EVTDESC16:0 "低地地方外からの圧制者に屈するよりも、[Root.GetName]はオランダ共和国に加わることを決断した。"
  flavor_bur.EVTOPTA16:0 "賢明な選択だ。"
  flavor_bur.EVTNAME17:0 "[From.GetName]が共和国に参加"
  flavor_bur.EVTDESC17:0 "破滅の危機に直面するよりも、[From.GetName]は我々の共和国に加わることを要求した。"
@@ -2794,9 +2794,9 @@
  flavor_hol.EVTOPTA4:0 "彼を採用する。"
  flavor_hol.EVTOPTB4:0 "彼を無視する。"
  flavor_hol.EVTNAME5:0 "ヴィルヘルムス"
- flavor_hol.EVTDESC5:0 "国歌であるヴィルヘルムスあるいはヴィルヘルムス・ファン・ナッソウエは、オランダの人々の一部で非常に人気があり、1932年にオランダの公式の国歌となった。ウィレム・ファン・オラニエあるいはオラニエ公ウィレムは、主人公であり、彼の人生と、そしてなぜ彼がスペイン王と戦っているのかが語られ、一人称視点で書かれている。国歌として、歌の歌詞や曲は非常に平和的である。"
+ flavor_hol.EVTDESC5:0 "国歌であるヴィルヘルムスことヴィルヘルムス・ファン・ナッソウエは、オランダ国民の一部で非常に人気があり、1932年にオランダの公式の国歌となった。ウィレム・ファン・オラニエ（オラニエ公ウィレム）が主人公であり、彼の人生と、そしてなぜ彼がスペイン王と戦っているのかが一人称視点で語られている。国歌として、歌の歌詞や曲は非常に平和的である。"
  flavor_hol.6.t:0 "チューリップへの熱狂"
- flavor_hol.6.d:0 "チューリップはオスマン帝国から1550年代にヨーロッパに導入された。それらはすぐに高級品としてオランダの豊かな商人たちの間で人気を博した。市場が拡大し、フランスで需要が高まった1634年に投機家が市場に参入した。1636年に先物市場が創設され、秋と冬、1637年2月に価格が暴落するまでの間、価格が急騰した。その結果は、多くの破産と経済的国難であった。"
+ flavor_hol.6.d:0 "チューリップはオスマン帝国から1550年代にヨーロッパに導入された。それらはすぐに高級品としてネーデルラントの豊かな商人たちの間で人気を博した。市場が拡大し、フランスで需要が高まった1634年に投機家が市場に参入した。1636年に先物市場が創設され、秋と冬、1637年2月に価格が暴落するまでの間、価格が急騰した。その結果は、多くの破産と経済的国難であった。"
  flavor_hol.6.a:0 "これは最悪だ！"
  flavor_hol.6.b:0 "国家は損失を軽減することができる。"
  hol_tulip_crisis:0 "チューリップ・バブル"
@@ -2940,11 +2940,11 @@
  flavor_bur.EVTOPTA13:1 "譲歩しない。"
  flavor_bur.EVTOPTB13:1 "税金を下げる。"
  flavor_bur.EVTNAME14:0 "シャロレー法廷と血の布告"
- flavor_bur.EVTDESC14:0 "1567年、シャロレー法廷はブルゴーニュの精鋭部隊を連れてオランダに到着し、これを最後に、オランダの暴動を撃ち破ることを決めた。シャロレー法廷は血の布告を発し、それにより大量逮捕と日常的な裁判による厳しい軍事独裁制を樹立することができた。異端審問の恐怖は激しくなり、何百人もの人々が処刑された。1568年、シャロレー法廷はホールン伯爵とエフモント伯爵を逮捕し、これによりオラニエ公ウィレムが唯一の旗を取る指導者として残された。1570年、シャロレー法廷は、オランダが2年目の税金を支払ったにもかかわらず、10%の税金を導入した。オランダにストライキが広がり…1573年には「連盟の総督」がオランダの征服に失敗したのは明らかであった。"
+ flavor_bur.EVTDESC14:0 "1567年、シャロレー伯はブルゴーニュの精鋭部隊を率いてネーデルラントに到着し、オランダの反乱を完全に断ち切る決意を固めた。シャロレー伯は「血の勅令」を発布し、大量逮捕や名誉裁判を日常的に行う過酷な軍事独裁体制を作り上げた。異端審問の恐怖が強化され、数百人が処刑された。1568年、シャロレー伯はホーン伯とエフモント伯を逮捕・処刑し、オラニエ公ウィレムは旗を掲げた唯一の指導者となった。1570年、シャロレー伯は自ら10％の税を導入した。オランダ人が、これ以上の追加税は課さないという約束のもと、全階級が合意し2年分の税を支払ったばかりだった。ネーデルラントにストライキが広がり…1573年、「連盟の総督」がオランダ人を服従させることに失敗したことは明らかだった。"
  flavor_bur.EVTOPTA14:0 "譲歩しない。"
  flavor_bur.EVTOPTB14:0 "その消費税を導入してはならない。"
  flavor_bur.EVTNAME15:0 "マコン伯爵とアラス同盟"
- flavor_bur.EVTDESC15:0 "1578年、強力なシャロレー家の一員であるマコン伯爵がネーデルラントに到着した。マコン伯爵は優れた性格を持ち、良い政治家と将軍となっただけではなく有能な人物でもあった。オラニエ公ウィレムは強力な対抗者を得ることとなった。マコン伯爵は、ブルゴーニュがカトリックの州の欲求を果たしている場合に限り、ネーデルラントの支配を維持できることをすぐに理解した。1579年、ブルゴーニュは南部のカトリック州をアラス同盟へと導き、ブルゴーニュとの平和を成し遂げた。しかし、北部のいくつかの州では、新たなオランダ国家の最初の兆候であるユトレヒト連合が形成されていた。その後、マコン伯爵はアラス同盟を北部と北部の人々への侵略の安全な拠点として利用したが、1588年のマコン伯爵の2人の兄に対する殺害の試みから救っただけで、彼はすぐにブルゴーニュへ去ることを余儀なくされた。"
+ flavor_bur.EVTDESC15:0 "1578年、有力なシャロレー家の一員であるマコン伯がオランダに到着した。マコン伯は性格がよく、有能で、優れた将軍であり政治家でもあった。オラニエ公ウィレムは彼に強力な敵意を抱いた。マコン伯は、ブルゴーニュがネーデルラントの支配権を維持できるのは、カトリック諸州の欲望につけこんでこそであることをすぐに理解した。1579年、ブルゴーニュは南部のカトリック諸州の一部をアラス連合に参加させることに成功し、ブルゴーニュと和平を結んだ。しかし、北部のいくつかの州は－新たなオランダ国家の最初の兆候－ユトレヒト同盟を結成。その後、マコン伯はアラス連合を安全な拠点として北部への侵攻を開始したが、1588年にマコン伯の2人の兄に対する暗殺計画を阻止したのみで、マコン伯はすぐにブルゴーニュへ去ることを余儀なくされた。"
  flavor_bur.EVTOPTA15:0 "アラス同盟に署名する。"
  flavor_bur.EVTOPTB15:0 "譲歩はしない。"
  flavor_bur.EVTOPTC15:0 "アラス同盟と減税に署名する。"
@@ -3019,7 +3019,7 @@
  flavor_jap.EVTDESC7:1 "不潔で、日本の文章を理解できない礼儀知らずの態度の外国人は「葡萄牙」や「阿蘭陀」といった馬鹿げた名前の国から日本に上陸した。これらの外国人は探検家、宣教師、商人を連れて来ており、彼らの存在はすでに人々に影響を与え始めている。"
  flavor_jap.EVTOPTA7:1 "新しい交易商たちを歓迎する。"
  flavor_jap.EVTNAME8:1 "西洋の難破船"
- flavor_jap.EVTDESC8:1 "乗組員が「マゼラン海峡」と呼ぶところを通って、長く困難な航海の後、オランダからの船が我々の海岸に到着した。「リーフデ号」は、5隻の船団で残っている唯一の船であり、元々100人以上いた乗組員は、病気や死により24人しか残っていない。\n\n西洋の珍しい豊富な貨物や軍事装備は、乗組員よりはるかに優れ、かなり価値があるはずである。さらに言えば、生存者の一人、ウィリアム・アダムスと呼ばれる航海士は、彼を我々の「王」の前に連れて行くよう主張している…"
+ flavor_jap.EVTDESC8:1 "乗組員が「マゼラン海峡」と呼ぶところを通って、長く困難な航海の後、オランダからの船が漂着した。「リーフデ号」は、5隻の船団で唯一残った船であり、元々100人以上いた乗組員は、病気で瀕死の24人しか残っていない。\n\n西洋の珍品や軍装品などの豊富な積荷は、乗組員よりもはるかに有利で、かなりの価値があるはずだ。 さらに、生存者の一人、ウィリアム・アダムズという航海士が、「王」の前に連れていけと主張する..."
  flavor_jap.EVTOPTA8:1 "何もしない。"
  flavor_jap.EVTOPTB8:1 "外国人を助けよう。"
  flavor_jap.EVTOPTC8:1 "私のところへ外国人を連れてこい。"
@@ -3242,8 +3242,8 @@
  flavor_ara.EVTDESC3:0 "イタリアの詩人であり、教会法の法律家、学者、外交官、そして歴史家であるアントーニオ・ベッカデッリは、現在、$COUNTRY$の支配者の後援のもとで、自身の言語学上の研究に身を捧げている。彼はアントーニオの回廊と呼ばれたアカデミーを創設し、若手学者ジョヴァンニ・ポンターノを王に紹介した。彼の偉大な知識は彼が優れた相談役になることを保証しており、新しい顧問としてアントーニオ・ベッカデッリを雇うことは賢明だろう。"
  flavor_ara.EVTOPTA3:0 "うん、彼を雇おう。"
  flavor_ara.EVTNAME4:0 "イオヴィアヌス・ポンタヌス"
- flavor_ara.EVTDESC4:0 "アントーニオ・ベッカデッリは、イオヴィアヌス・ポンタヌスまたはジョヴァンニ・ポンターノという名前の若い学者を$COUNTRY$の支配者に初めて紹介した。ジョヴァンニ・ポンターノはアルフォンソ5世の若き継承者の家庭教師で、政治顧問、軍事秘書、首相を務めたが、彼は主に学者として名を馳せた。「王子の寛大さ、物凄さ、素晴らしさ」などの話題が彼によって論じられ、彼は建築物や素晴らしいモニュメントが偉大な支配者であるということの証であると主張した。彼は現代生活の事実と個人的感情の現実を、十分に古典的でありながら常にその人らしい言葉で表現することができた。ウラニアは神話のエピソードという崇高な話題で飾られた、当時の天文学を体現した彼の野心的で教訓的な6歩格の詩であった。彼はラテン語で書いており、彼の最も独創的な作詩は「夫婦愛、星座のエリダヌス座、墳丘墓、哀歌、バイアエ」といった個人的な話題に基づいており、彼の情熱的な感情は色とりどりで裏表のない暖かさで言い表された。"
- flavor_ara.EVTOPTA4:0 "彼は我々なしにはそれを行うことはできなかったろう！"
+ flavor_ara.EVTDESC4:0 "アントーニオ・ベッカデッリは、イオヴィアヌス・ポンタヌス、またの名をジョヴァンニ・ポンターノという若い学者を$COUNTRY$の支配者に初めて紹介した。ポンターノはアルフォンソ寛大王（アルフォンソ5世）の若き後継者の家庭教師で、政治顧問、軍事秘書、宰相を務めたが、主に学者として名を馳せた。「王侯の自由」、「獰猛さ」、「壮麗さ」といったテーマについて論じ、建築物や素晴らしいモニュメントが偉大な支配者の証であると主張した。彼は現代生活の事実と個人的感情の現実を、十分に古典的でありながら常にその人らしい言葉で表現することができた。『ウラニア』は、神話のエピソードという崇高な話題で飾られた、当時の天文学を体現した彼の野心的で教訓的な6歩格の詩であった。ラテン語で書かれた彼の最も独創的な詩曲は、個人的な話題に基づいており－『夫婦愛（De conjugali amore）』、『エリダヌス座（Eridanus）』、『墳丘墓（Tumuli）』、『哀歌（Naeniae）』、『バイアエ－（Baiae）』－に代表されるように情熱的な感情が色とりどりで素朴な暖かさで言い表された。"
+ flavor_ara.EVTOPTA4:0 "彼は私たちなしでは成し遂げられなかっただろう！"
  flavor_ara.EVTOPTB4:0 "彼の成功は人々のそれだ。"
  flavor_ara.EVTNAME5:0 "サンタ・マリア・デ・シヘナ修道院"
  flavor_ara.EVTDESC5:0 "女子修道院であるサンタ・マリア・デ・シヘナ修道院は、アラゴンのアルフォンソ2世の妻であるカスティーリャの女王サンチャによって創立され、1183年から1208年にかけて建設された。それはイングランドの芸術家による約1200のいくつかの重要なロマネスク様式のフレスコ画を収めており、衰退し始めたとはいえ、修道院は依然として偉大な隠遁生活の場である。修道女たちは我々に修道院への資金援助を依頼している。シヘナの巨匠は大きな祭壇画を描こうとしている。"
@@ -3989,7 +3989,7 @@
  flavor_hab.17.a:0 "投資家が続行することを許可する。"
  flavor_hab.17.b:0 "いや、農民はそのようなことに気を取られてはならない。"
  flavor_hab.18.t:0 "オーステンデ会社"
- flavor_hab.18.d:0 "東インドの富は終わりがないように見え、オランダとイングランドは中国とインドの商品をヨーロッパ市場に持ち込むだけで、ますます豊かに成長している。今日、多くのフランダースの商人だけでなく、オランダとイングランドの船長たちが、$MONARCHTITLE$$MONARCH$に接触し、自ら王家の勅許を求めた。彼らは、必要な専門知識と初期の資本をすでに持っていると主張し、彼らが裏切り者や海賊とはみなされずに他のインド企業と競争できるようにするために王家の勅許だけを求めている。引き換えに、会社はオーストリア領ネーデルラントに拠点を置き、我々がインドと中国の富に参加することができるようになるのだ。"
+ flavor_hab.18.d:0 "東インドの富は尽きることがないようで、オランダ人やイングランド人は中国とインドの商品をヨーロッパ市場に持ち込むだけで、ますます豊かになっている。今日、多くのフランダースの商人だけでなく、オランダ人やイングランド人の船長たちが、$MONARCHTITLE$$MONARCH$に接触し、独自の王立勅許状を求めている。彼らは、必要な専門知識と開業資金をすでに持っていると主張し、彼らが叛逆者や海賊とはみなされることなく他のインド企業と競争するために公的な勅許状を求めている。その引き換えに、会社はオーストリア領ネーデルラントに拠点を置き、我々がインドと中国の富に参加することができるようになるのだ。"
  flavor_hab.18.a:0 "素晴らしい！"
  flavor_hab.18.b:0 "我々は隣国を怒らせる危険を冒すことはできない。"
  flavor_hab.19.t:0 "オーステンデ会社の閉鎖の要求"
