--- a/source/localisation/golden_century_l_english.yml
+++ b/source/localisation/golden_century_l_english.yml
@@ -120,7 +120,7 @@
  has_holy_order_trigger_tooltip:0 "州は、修道会に割りあてられたステートの一部である"
  EXPEL_MINORITY:0 "$NAME$のマイノリティを追放する"
  EXPEL_MINORITIES_FROM:0 "$PROVINCE$から追放"
- EXPEL_MINORITIES_TOOLTIP:0 "$PROVINCE|Y$のマイノリティはゆっくりと$COLONY|Y$に追放され、我が国の主要な文化と宗教を持つ国民のみが残ります。"
+ EXPEL_MINORITIES_TOOLTIP:0 "$PROVINCE|Y$のマイノリティはゆっくりと$COLONY|Y$に追放され、我が国の主要な文化と宗教を持つ臣民のみが残ります。"
  EXPEL_MINORITIES_TOOLTIP_EXTRA:0 "植民地は$CULTURE|Y$文化と$RELIGION|Y$を採用します。\nこれには$COST|Y$£dip£のコストがかかり、植民者の維持費は$MAINTENANCE$変化します。\nマイノリティの追放により、入植可能性は$SETTLER_CHANCE$増加し、植民地が自立した際には開発が$VAL$増加します。"
  EXPEL_MINORITIES_ALREADY_SHIPPED_OFF:0 "このマイノリティはすでに$COLONY$に追放中です。"
  EXPEL_MINORITIES_NOT_CONTROLLED:0 "現在支配している州からしかマイノリティを追放できません。"
@@ -153,7 +153,7 @@
  SEND_COLONIST_LABEL_TOOLTIP:1 "$PROVINCE|Y$に植民者を派遣することができます。\n植民者は植民地を作り、一定の条件を満たした場合は我々の主要文化と宗教に変わります。"
  SEND_COLONIST_TOOLTIP_EXTRA:0 "追い払いたいマイノリティがいるなら、この州はマイノリティの追放にも適格です。"
  EXPEL_MINORITY_TOOLTIP:1 "$PROVINCE|Y$にマイノリティを追放することができます。\nマイノリティの州の文化と宗教は新しい植民地へと移ります。"
- SELECT_MINORITY_TOOLTIP:0 "$MINORITY|Y$のマイノリティを$PROVINCE|Y$に追放することにより、我が国の文化と宗教を持つ国民がゆっくりと取って代わります。"
+ SELECT_MINORITY_TOOLTIP:0 "$MINORITY|Y$のマイノリティを$PROVINCE|Y$に追放することにより、我が国の文化と宗教を持つ臣民がゆっくりと取って代わります。"
  SELECT_MINORITY_TOOLTIP_EXTRA_ACCEPTED:0 "このマイノリティは§Y受容されています§!。追放に適格な州は$NUM|Y$あります。"
  SELECT_MINORITY_TOOLTIP_EXTRA_NOT_ACCEPTED:0 "このマイノリティは§R受容されていません§!。追放に適格な州は$NUM|Y$あります。"
  SELECT_MINORITY_TOOLTIP_EXTRA_UNVAILABLE:1 "$NUM|Y$の適格な州のうち、マイノリティを追放できる州は現在ひとつもありません。\nマイノリティを追放するためには、適格な州が中核州であること、ステートの一部であること、分離主義も宗教的熱意も存在しないことが必要です。また、建設や改宗の途中であってはいけません。"
@@ -534,7 +534,7 @@
  MISSIONARY_MULTIPLIER_COST:0 "\nコストは以下により乗法で補正されます：\n"
  lottery_candidate_bonus_one:0 "§Yランダム候補ボーナス§!：この候補はランダムに選ばれたスキルが§G1§!変化しています。"
  lottery_candidate_bonus_plural:0 "§Yランダム候補ボーナス§!：各候補はランダムに選ばれたスキルが§G1§!変化しています。"
- STEPPE_HORDE_BENEFITS:0 "\n§Yステップの遊牧民§!政府改革により以下のボーナスを得ます：\n国家人的資源補正：§G+20.0%§!\n陸軍扶養限界補正：§G+20.0%§!\n分離主義の年数：§G-5§!\n略奪速度：§G+50.00%§!\n制度の普及：§R-15.0%§!\n移動速度：§G+20.00%§!\n補充コスト：§G-50.0%§!\n騎兵と歩兵の比率：§G+25.0%§!"
+ STEPPE_HORDE_BENEFITS:0 "\n§Yステップの遊牧民§!政府改革により以下のボーナスを得ます：\n国家の人的資源補正：§G+20.0%§!\n陸軍扶養限界補正：§G+20.0%§!\n分離主義の年数：§G-5§!\n略奪速度：§G+50.00%§!\n制度の普及：§R-15.0%§!\n移動速度：§G+20.00%§!\n補充コスト：§G-50.0%§!\n騎兵と歩兵の比率：§G+25.0%§!"
  flavor_nav.5.a.tt:0 "§Y[ARA.Monarch.Dynasty.GetName]§!家の一員が[ARA.GetName]を統治するでしょう。"
  flavor_tun.EVTOPTC1:0 "彼にアルジェの自由な自治権を与える。"
  MODIFIER_MAY_FABRICATE_FOR_VASSALS:1 "従属国への請求権の捏造"
