--- a/source/localisation/king_of_kings_l_english.yml
+++ b/source/localisation/king_of_kings_l_english.yml
@@ -133,8 +133,8 @@
  BYZ_reform_the_themata_desc:0 "テマ制は機能しているが、現代のニーズからするとひどく時代遅れである。火薬と常備軍の時代という未来により適したものに改革する必要がある。"
  BYZ_varangian_guard_title:1 "[Root.GetPreviewColorBYZ]ヴァリャーグ衛兵[Root.GetPreviewColorBYZ_end]"
  BYZ_varangian_guard_desc:0 "ヴァリャーグ衛兵は我が軍の精鋭部隊である。当初はヴァイキングの傭兵で構成されていたが、後にアングロサクソン人によって強化された。この部隊はより大きな社会に統合され、独立した連隊としては存在しなくなる。1400年代には、多くの人々がヴァリャーグであると主張していた。今こそ、この有名な部隊を復活させ、近代化する時である。"
- BYZ_western_flank_1_2:0 "「§Y西フランクの回復§!」に以下の補正：\n　年間威信：§G+0.25§!\n　異端に対する国家布教強度：§G+1.0%§!"
- BYZ_western_flank_2_3:0 "「§Y西フランクの回復§!」に以下の補正：\n　安定度コスト補正：§G-10.0%§!\n　異端に対する国家布教強度：§G+1.0%§!"
+ BYZ_western_flank_1_2:0 "「§Y西フランクの回復§!」に以下の補正：\n　年間威信：§G+0.25§!\n　異端に対する国家の布教強度：§G+1.0%§!"
+ BYZ_western_flank_2_3:0 "「§Y西フランクの回復§!」に以下の補正：\n　安定度コスト補正：§G-10.0%§!\n　異端に対する国家の布教強度：§G+1.0%§!"
  BYZ_western_flank_3_4:0 "「§Y西フランクの回復§!」に以下の補正：\n　陸軍士気：§G+5.0%§!\n　領土管理限界：§G+100.00§!"
  BYZ_western_flank_1:0 "西フランクの回復"
  BYZ_western_flank_2:0 "西フランクの回復"
@@ -149,7 +149,7 @@
  BYZ_southern_provinces_2:0 "南部諸州の再征服"
  desc_BYZ_southern_provinces_1:0 "南部沿岸地方を再征服することで、我々の海軍に力を与えることができる。"
  desc_BYZ_southern_provinces_2:0 "南部沿岸地方を再征服することで、我々の海軍に力を与えることができる。"
- BYZ_eastern_flank_1_2:0 "「§Y東部国境§!」に以下の補正：\n　年間威信：§G+0.25§!\n　異教に対する国家布教強度：§G+1.0%§!"
+ BYZ_eastern_flank_1_2:0 "「§Y東部国境§!」に以下の補正：\n　年間威信：§G+0.25§!\n　異教に対する国家の布教強度：§G+1.0%§!"
  BYZ_eastern_flank_2_3:0 "「§Y東部国境§!」に以下の補正：\n　陸軍士気：§G+5.0%§!\n　安定度コスト補正：§G-5.0%§!"
  BYZ_eastern_flank_1:0 "東部国境"
  BYZ_eastern_flank_2:0 "東部国境"
@@ -481,7 +481,7 @@
  BYZ_conversion_to_orthodox:0 "§Y正教会の狂信者§!は§Y[Root.GetName]§!を正教会に引き戻すことはできない。§Y[BYZ.GetName]§!となり、ふたたび§Y正教会§!となるためには「§Y正教への回帰§!」の決断を下さなければならない。"
  BYZ_at_least_1_tolerance_heretic:0 "異端の寛容度が§G1.00§!以上"
  BYZ_may_not_complete_as_catholic_latin_empire:0 "§Yカトリックの[LAE.GetName]§!であるため、このミッションを完了できないでしょう。"
- BYZ_pronoia_subject_explanation:0 "§Yプロノイア§!は§Y[BYZ.GetName]§!と§Y[ROM.GetName]§!のみが使用できる特殊な従属国タイプです。\n\nそれらの国が持つことのできる§Yプロノイア§!の数は§Yプロノイアの上限数§!により制限されます。これは§Yアイデアグループ§!、§Y政府改革§!、および§Y陸軍扶養限界§!の100連隊ごとに得ることができます。また§Yプロノイア§!は§Y外交関係§!枠を消費しません。\n\nプロノイアは戦争の手助けをするタイプの従属国です。デフォルトでは、宗主国の陸軍扶養限界を§R-5§!する代わりに、プロノイアは扶養限界を§G10.0%§!、人的資源と水兵を§G20.0%§!得ます。それに加えて、プロノイアは連隊コストと国家人的資源に多大なるボーナスを得、そして代わりに中核州作成コストと過剰拡大の影響に多大なペナルティを得ます。\n\n§Y世襲プロノイア§!を併合するためには、最初に「§Y相続権の剥奪§!」外交行動によって通常の§Yプロノイア§!に変更しなければなりません。通常の§Yプロノイア§!は君主の死によって自動的に継承されます。"
+ BYZ_pronoia_subject_explanation:0 "§Yプロノイア§!は§Y[BYZ.GetName]§!と§Y[ROM.GetName]§!のみが使用できる特殊な従属国タイプです。\n\nそれらの国が持つことのできる§Yプロノイア§!の数は§Yプロノイアの上限数§!により制限されます。これは§Yアイデアグループ§!、§Y政府改革§!、および§Y陸軍扶養限界§!の100連隊ごとに得ることができます。また§Yプロノイア§!は§Y外交関係§!枠を消費しません。\n\nプロノイアは戦争の手助けをするタイプの従属国です。デフォルトでは、宗主国の陸軍扶養限界を§R-5§!する代わりに、プロノイアは扶養限界を§G10.0%§!、人的資源と水兵を§G20.0%§!得ます。それに加えて、プロノイアは連隊コストと国家の人的資源に多大なるボーナスを得、そして代わりに中核州作成コストと過剰拡大の影響に多大なペナルティを得ます。\n\n§Y世襲プロノイア§!を併合するためには、最初に「§Y相続権の剥奪§!」外交行動によって通常の§Yプロノイア§!に変更しなければなりません。通常の§Yプロノイア§!は君主の死によって自動的に継承されます。"
  BYZ_add_1_years_of_trade_income:0 "§G1§!年分の§Y交易§!収入を追加します。"
  BYZ_add_2_years_of_trade_income:0 "§G2§!年分の§Y交易§!収入を追加します。"
  BYZ_other_provinces_will_also_receive_this_modifier:0 "§Y[2313.GetName]§!、§Y[379.GetName]§!、§Y[358.GetName]§!、§Y[118.GetName]§!も同様に§Y補正§!を得ます。"
@@ -797,7 +797,7 @@
  is_pronoia_subject_type:0 "プロノイアである"
  create_pronoia:0 "プロノイアの土地"
  create_pronoia_title:0 "プロノイアの土地"
- create_pronoia_desc:1 "本当に§Y[From.GetName]§!をプロノイアの土地にしますか？[Root.GetPronoiaInheritanceLaw]\n\n§Yプロノイア§!は§Y[BYZ.GetName]§!と§Y[ROM.GetName]§!のみが使用できる特殊な従属国タイプです。\n\nそれらの国が持つことのできる§Yプロノイア§!の数は§Yプロノイアの上限数§!により制限されます。これは§Yアイデアグループ§!、§Y政府改革§!、および§Y陸軍扶養限界§!の100連隊ごとに得ることができます。また§Yプロノイア§!は§Y外交関係§!枠を消費しません。\nプロノイアは戦争の手助けをするタイプの従属国です。デフォルトでは、宗主国の陸軍扶養限界を§R-5§!する代わりに、プロノイアは扶養限界を§G10.0%§!、人的資源と水兵を§G20.0%§!得ます。さらに、プロノイアは以下の補正を受けます：\n§G-50.0%§! 連隊コスト\n§G+5000§! 人的資源増加\n§G+50.0%§! 国家人的資源補正\n§R+50.0%§! 中核州作成コスト\n§R-20.0%§! 統治効率\n\n[Root.GetProniaAdvancedTooltip]"
+ create_pronoia_desc:1 "本当に§Y[From.GetName]§!をプロノイアの土地にしますか？[Root.GetPronoiaInheritanceLaw]\n\n§Yプロノイア§!は§Y[BYZ.GetName]§!と§Y[ROM.GetName]§!のみが使用できる特殊な従属国タイプです。\n\nそれらの国が持つことのできる§Yプロノイア§!の数は§Yプロノイアの上限数§!により制限されます。これは§Yアイデアグループ§!、§Y政府改革§!、および§Y陸軍扶養限界§!の100連隊ごとに得ることができます。また§Yプロノイア§!は§Y外交関係§!枠を消費しません。\nプロノイアは戦争の手助けをするタイプの従属国です。デフォルトでは、宗主国の陸軍扶養限界を§R-5§!する代わりに、プロノイアは扶養限界を§G10.0%§!、人的資源と水兵を§G20.0%§!得ます。さらに、プロノイアは以下の補正を受けます：\n§G-50.0%§! 連隊コスト\n§G+5000§! 人的資源増加\n§G+50.0%§! 国家の人的資源補正\n§R+50.0%§! 中核州作成コスト\n§R-20.0%§! 統治効率\n\n[Root.GetProniaAdvancedTooltip]"
  extra_text_hereditary_proniar:0 "§Y世襲プロノイア§!従属国を併合するためには、まずその国を「§Y相続権の剥奪§!」の外交行動で正規の§Yプロノイア§!にしなければなりません。正規の§Yプロノイア§!になった場合、その従属国は彼らの統治者の死後に継承されます。"
  extra_text_proniar:0 "プロノイアは君主の死後、我々が継承します。"
  create_pronoia_non_inherently:0 "プロノイアは、外交行動「§Y相続権の剥奪§!」を使用するまで継承することができません。"
@@ -1221,7 +1221,7 @@
  YEM_sanction_holy_war_claims_permanent:0 "封建神権制のインタラクション「§Y制裁のための聖戦§!」がアップグレードされ、請求権が§Y恒久§!になります。"
  YEM_invite_minorities_distribute_5_dev:0 "封建神権制のインタラクション「§Y海外からの少数派の招聘§!」がアップグレードされ、国全体で§G5§! の開発度をランダムに分配するようになります。"
  YEM_invite_minorities_theologian:0 "封建神権制のインタラクション「§Y海外からの少数派の招聘§!」がアップグレードされ、宗教が§Yシーア派§!で、文化がシーア派の州の中からランダムで選ばれた州の文化であり、§G-75.0%§!引きで雇用できる§Y神学者§!がやって来ます。"
- YEM_seize_clerical_holdings_every_temple_provinces:0 "封建神権制のインタラクション「§Y聖職者の土地の差押え§!」がアップグレードされ、§Yモスク§!かもしくはその上級が建造されている州で、国家税補正§G+10.0%§! と追加で建設コスト§G-10.0%§!を獲得します。"
+ YEM_seize_clerical_holdings_every_temple_provinces:0 "封建神権制のインタラクション「§Y聖職者の土地の差押え§!」がアップグレードされ、§Yモスク§!かもしくはその上級が建造されている州で、国家の税補正§G+10.0%§! と追加で建設コスト§G-10.0%§!を獲得します。"
  YEM_seize_clerical_holdings_clergy_crownland:0 "封建神権制のインタラクション「§Y聖職者の土地の差押え§!」がアップグレードされ、§Y[Root.GetClergyName]§!階級から直轄地を§G5.0%§!割譲させます。"
  YEM_gain_a_tenth_of_yearly_income:0 "§Y税収§!系建物が建造されいている自国の領有州すべてで年間収入§G+0.1§!を獲得します。ただし最大でも20の場合で§G+2.0§!までです。"
  YEM_every_province_with_tax:0 "§Y税収§!系建物がある州すべて："
@@ -3818,7 +3818,7 @@
  mam_assign_waqf_desc:0 "恵まれない人々や特に教育機関を援助するには、硬貨や富を準備することである。慈善事業は敬虔で繁栄した社会の活力源であり証だ！"
  mam_unlock_galley_doctrine_tt:1 "海軍ドクトリン§Yマムルークのガレー船§!が利用可能になります。このドクトリンの効果：\nガレー船の戦闘能力：§G+15%§!\nガレー船のコスト：§G-25%§!"
  mam_unlock_light_doctrine_tt:0 "海軍ドクトリン§Yマムルークの商船§!が利用可能になります。このドクトリンの効果：\n船の交易力：§G+15%§!\n小型船のコスト：§G-25%§!"
- mam_unlock_warships_doctrine_tt:0 "海軍ドクトリン§Yマムルークの軍艦§!が利用可能になります。このドクトリンの効果：\n大型船の戦闘能力：§G+10%§!\n海軍交戦幅国家補正：§G+10%§!"
+ mam_unlock_warships_doctrine_tt:0 "海軍ドクトリン§Yマムルークの軍艦§!が利用可能になります。このドクトリンの効果：\n大型船の戦闘能力：§G+10%§!\n国家の海軍交戦幅補正：§G+10%§!"
  mam_unlock_transports_doctrine_tt:1 "海軍ドクトリン§Yマムルークの輸送船§!が利用可能になります。このドクトリンの効果：\n乗船時の消耗：§G-50%§!\n海兵隊扶養限界：§G+10%§!\n艦隊移動速度：§G+1§!"
  unlock_state_madrasas_reform_tt:0 "政府改革§Y国立マドラサ§!が利用可能になります：\n\n§Y政府の仕組み：§!\n各§Y顧問§!はレベル毎に年間革新性§G+0.02§!を生み出します\n\n§Y改革補正：§!\n統治者の宗教を持つ顧問の費用：§G-20.0%§!\n年間政府力：§G+0.33§!"
  mam_enable_coffee_monopoly_tt:0 "商人組合階級特権「§Yコーヒーの独占§!」が利用可能になります：\n\n§Y恩恵：§!\n商人組合階級の忠誠均衡値：§G+10%§!\nコーヒー産出州の基本税：§G+1§!\n"
@@ -3910,7 +3910,7 @@
  mechanic_advisors_generate_innovativeness_yes:0 "各§Y顧問§!はレベル毎に年間革新性§G+0.02§!を生み出します"
  egyptian_government_reform:0 "エジプト政府"
  egyptian_government_reform_desc:0 "自国の近代化の必要性と頑健な中央政府の開発は、自領全土における一連の大革新に移行するだろう。"
- mam_adm_advisors_generate_idea_cost_tt:0 "\n全ての§Y統治§!顧問は、1レベルにつきアイデアコストを§G-1%§!します。"
+ mam_adm_advisors_generate_idea_cost_tt:0 "\n全ての§Y統治§!顧問は、1レベルにつきアイデアコスト§G-1%§!"
  mam_mosque_great_mosque_generates_crown_land_tt:0 "\n§Yモスク§!および§Y大モスク§!を建設すると、直轄地が§G+0.25%§!され、以下の報酬も得ます：\n"
  integrated_ottoman_officials:1 "オスマン官僚の統合"
  integrated_ottoman_officials_desc:0 "かつて強大だったオスマン帝国は廃墟と化している。したがって、彼らの統治方法を採用し、自国社会をより良くするためにその統治方法を完成させることが賢明だろう。"
@@ -3956,7 +3956,7 @@
  flavor_mam.101.a:0 "我が革新的意識の麗美なる象徴よ！"
  flavor_mam.101.b:0 "代わりにマドラサの全国的な改修に資金提供しよう。"
  flavor_mam.102.t:0 "エジプトの穀物取引"
- flavor_mam.102.d:0 "今の時代、穀物交易は自帝国の繁栄を維持するうえで極めて重要な役割を果たしました。効率的な穀物生産と流通の重要性を認識し、国民への安定した食料供給を確保しました。よく組織された穀倉地帯と交易網は、穀物の領内移動を容易にし、経済成長と社会の安定性を促進しました。この交易の発展を優先することで、臣民の福祉と自国の永続的な力への専心ぶりを見せつけました。"
+ flavor_mam.102.d:0 "今の時代、穀物交易は自帝国の繁栄を維持するうえで極めて重要な役割を果たしました。効率的な穀物生産と流通の重要性を認識し、民衆への安定した食料供給を確保しました。よく組織された穀倉地帯と交易網は、穀物の領内移動を容易にし、経済成長と社会の安定性を促進しました。この交易の発展を優先することで、臣民の福祉と自国の永続的な力への専心ぶりを見せつけました。"
  flavor_mam.102.a:0 "自国の富を広めることに注力しよう！"
  flavor_mam.102.b:0 "さらなる増産を目指すべきだろうな。"
  mam_more_exports_2_tt:0 "\n§Y穀物の輸出§!外交コマンドにおいて、さらに§Y2§!国を追加することができる"
@@ -4049,7 +4049,7 @@
  kashifs:0 "カーシフ"
  kashifs_desc:0 "カーシフ行政官は、統治当局に代わって記録管理、書簡交換、財務、通信などの業務を担当する。国家の行政機構を維持し、効果的な統治を行う上で重要な役割を果たしている。これらの行政官は多くの場合、国家運営を助ける知識豊富な人物であり、支配者と社会のさまざまな層との仲介役を務める。"
  mam_export_grain_title:0 "穀物の輸出"
- mam_export_grain_desc:2 "§Y[From.GetName]§!に穀物を輸出しますか？50£adm£の費用がかかり、重商主義が§G+2§!されます。\n\n[From.GetName]は君主が死亡もしくは外交関係を破棄するまで「§Y穀物の交易輸入§!」を獲得し、以下の効果を得ます：\n供給限界補正：§G+10%§!\n開発コスト：§G-5%§!\n国家不穏度：§G-1§!"
+ mam_export_grain_desc:2 "§Y[From.GetName]§!に穀物を輸出しますか？50£adm£の費用がかかり、重商主義が§G+2§!されます。\n\n[From.GetName]は君主が死亡もしくは外交関係を破棄するまで「§Y穀物の交易輸入§!」を獲得し、以下の効果を得ます：\n供給限界補正：§G+10%§!\n開発コスト：§G-5%§!\n国家の不穏度：§G-1§!"
  REQUIRES_ALLIANCE_OR_SUBJECT_TT:1 "§R[From.GetName]が同盟国または従属国でなければならない§!"
  is_already_trading_grain_tt:0 "我々はすでに[From.GetName]と穀物を取引している"
  must_be_within_distance_tt:0 "[From.GetName]の市場は我々の州から遠すぎる"
