--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -48,7 +48,7 @@
  MODIFIER_IMPERIAL_AUTHORITY_VALUE:0 "帝国の権威補正"
  MODIFIER_IMPERIAL_MANDATE:1 "天命成長補正"
  MODIFIER_EMBARGO_EFFICIENCY:0 "禁輸効率"
- MODIFIER_ADVISOR_POOL:0 "有効な顧問"
+ MODIFIER_ADVISOR_POOL:0 "利用可能な顧問"
  MODIFIER_RELIGIOUS_UNITY:0 "宗教統一度"
  MODIFIER_GLOBAL_TRADE_POWER:0 "世界交易力"
  MODIFIER_GLOBAL_FOREIGN_TRADE_POWER:0 "域外交易力"
@@ -363,7 +363,7 @@
  hol_arminianism:0 "アルミニウス主義"
  desc_hol_arminianism:0 "アルミニウス主義は、オランダ改革派の神学者、ヤーコブス・アルミニウスの神学的な思想に基づいている。"
  hol_de_witt:0 "ヤン・デ・ウィット"
- desc_hol_de_witt:0 "ヤン・デ・ウィットは、オランダの政治体制を支配した、17世紀半ばのオランダ政治の重要人物だった。"
+ desc_hol_de_witt:0 "ヤン・デ・ウィットは、17世紀半ばのオランダ政治を牛耳った重要人物である。"
  hol_anthony_heinsius:0 "アントン・ヘインシウス"
  desc_hol_anthony_heinsius:0 "アントン・ヘインシウスは、オランダの法律顧問を務めたオランダの政治家であった。"
  pol_konfederacja:0 "コンフェデラツィア"
