--- a/source/localisation/nw2_l_english.yml
+++ b/source/localisation/nw2_l_english.yml
@@ -432,8 +432,8 @@
  PROTECTORATES_NOT_ADVANCED:0 "私たちは保護国を作れる程、進歩していません"
  PROTECTORATES_THEY_NOT_ADVANCED:0 "彼らは保護国を作れる程、進歩していません"
  TRANSFER_TRADE_POWER_THEY_NOT_ADVANCED:0 "彼らは、私たちに交易力を移すのに十分なほど進歩していません。"
- OWNED_BY_OR_VASSALS:0 "§Y$COUNTRY$§!またはその従属国が所有している。"
- NOT_OWNED_BY_OR_VASSALS:0 "§Y$COUNTRY$§!またはその従属国が所有していない。"
+ OWNED_BY_OR_VASSALS:0 "§Y$COUNTRY$§!またはその従属国が領有している。"
+ NOT_OWNED_BY_OR_VASSALS:0 "§Y$COUNTRY$§!またはその従属国が領有していない。"
  OWNED_BY_OR_NON_SOVEREIGN_SUBJECTS:1 "$COUNTRY|Y$またはその従属国（非朝貢国）が領有している。"
  NOT_OWNED_BY_OR_NON_SOVEREIGN_SUBJECTS:1 "$COUNTRY|Y$またはその従属国（非朝貢国）が領有していない。"
  FE_USE_DYNAMIC_PROVINCE_NAMES:0 "州名の動的変更"
