--- a/source/localisation/origins_l_english.yml
+++ b/source/localisation/origins_l_english.yml
@@ -844,7 +844,7 @@
  send_the_shaman_to_a_foreign_country_title:0 "外国カルトへのシャーマン派遣"
  send_the_shaman_to_a_foreign_country_desc:0 "我が[Root.GovernmentName]のシャーマンを外国のカルトのある国家に派遣し、その国家の宗教とカルトの慣習を学ばせる。"
  zulu_nation_ct:0 "現地のングニ族を挑発する。それによって、通常より早く§Y[ZUL.GetName]§!が生まれるかもしれない。"
- federal_kingdoms_gather_the_armies_tt:0 "連合王国は次の§Y6ヶ月§!で部隊を招集する。それにより、後に§Y[Root.Culture.GetName]§!州の基本人的資源あたり§Y1000の人的資源§!を獲得する。\n人的資源は§Y国家人的資源補正§!によって増減する。\n§Y[Root.Culture.GetName]§!文化の州すべてで州自治率が§R+20.0%§!される。"
+ federal_kingdoms_gather_the_armies_tt:0 "連合王国は次の§Y6ヶ月§!で部隊を招集する。それにより、後に§Y[Root.Culture.GetName]§!州の基本人的資源あたり§Y1000の人的資源§!を獲得する。\n人的資源は§Y国家の人的資源補正§!によって増減する。\n§Y[Root.Culture.GetName]§!文化の州すべてで州自治率が§R+20.0%§!される。"
  federal_kingdoms_internal_royal_marriage_tt:0 "連合王国は次の§Y6ヶ月§!に婚姻を計画する。それにより、後に内部の王室間の婚姻が発生し、§Y20年間§!、以下の効果を与える：\n[Root.GetNobilityOrFallbackName]階級の忠誠均衡値：§G+10.0%§!\n[Root.GetNobilityOrFallbackName]階級の影響力：§Y+5.0%§!\n新たな後継者の可能性：§G+100.0%§!"
  federal_celebrate_rituals_together_tt:0 "連合王国は次の§Y6ヶ月§!で祝祭を準備する。それにより、後に安定度が§G+1§!される。\n§Y[Root.Culture.GetName]§!文化の州すべてで州自治率が§R+10.0%§!される。"
  federal_gain_tribal_allegiance_tt:0 "連合王国は次の§Y6ヶ月§!で[Root.Monarch.GetName]への忠誠を表明する。それにより、後に部族の忠誠が§G+3§!、§Y[Root.Culture.GetName]§!文化の州すべてで州自治率が§R+5.0%§!される。"
@@ -1025,7 +1025,7 @@
  mal_west_african_great_power_desc:1 "我が帝国は完全に衰退しかけていたが、何とか生き残り、さらには成長することまでできた！しかし、本拠地域は支配しているが、この世界で圧倒的に唯一の列強というわけではない。ヨーロッパ人も独力で強大な国家を形成し、今や自身の意志をアフリカの人々に押し付けようとしている。\n力をつけて、狭量なヨーロッパ人に一人残らず、彼らの野望が自国に強制などできないことを分からせる必要がある。"
  mal_west_african_great_power_ct:0 "§Yヨーロッパ§!国の中で、総開発度が§Y[Root.GetName]§!を超える国家が存在しない。"
  mal_brace_for_decline_title:0 "階級の好感度の獲得"
- mal_brace_for_decline_desc:1 "我が王国が最も苦しい時期を迎えているのは周知の事実だ。国民の多くが最悪の事態を恐れ、同時に属国たちや宿敵は自国が弱体化しているこの状況を利用する機会を伺っている。このような時期には、これまで以上に宮廷内の団結と誠実さを必要とする。機会あらばすぐに反抗されぬよう、階級たちにいくらかの好意を持ってもらうようにすべきだろう。"
+ mal_brace_for_decline_desc:1 "我が王国が最も苦しい時期を迎えているのは周知の事実だ。民衆の多くが最悪の事態を恐れ、同時に属国たちや宿敵は自国が弱体化しているこの状況を利用する機会を伺っている。このような時期には、これまで以上に宮廷内の団結と誠実さを必要とする。機会あらばすぐに反抗されぬよう、階級たちにいくらかの好意を持ってもらうようにすべきだろう。"
  mal_brace_for_decline_tt:0 "国難§Yマリの衰退§!の発生中でも、[Root.GetName]への階級の§Y忠誠§!がそのままとなる。"
  mal_get_competent_court_title:0 "有能な廷臣"
  mal_get_competent_court_desc:1 "1337年にマンサ・ムーサが亡くなると、息子のマガンが即位したーこれは黄金時代後に耐えねばならなかった多くのひどい支配者の最初の支配者である。1341年、マガンの後を継いだのは叔父のスレイマンで、彼は甥が犯した多くの財政的な失敗を元に戻した。しかし、彼の死後、マリにはわずか数ヶ月しか統治できなかったマンサや、独裁的な暴君ばかりであった。\n\nこの歴史から最終的に立ち直りたいならば、有能なマンサが即位す必要があるーあるいは少なくとも、宮廷の有能な人材を知るマンサが必要だ。"
@@ -1278,7 +1278,7 @@
  zim_amongst_the_great_powers_desc:0 "北から来た外国人が世界中で影響力を拡大しようとしているため、世界は縮まっている。自国が没落し、ヨーロッパ人の次の標的にならないよう、世界の主要国の一つにならねばならない。"
  zim_amongst_the_great_powers_tt:1 "この戦力投射は§Y永続§!です。\n"
  zim_modernize_state_title:0 "国家の近代化"
- zim_modernize_state_desc:1 "建国以来、自国民はムウェネムタパをジンバブエの神、ムワリの化身として崇めてきた。北からの異邦人の到来により、国民の頭の中には新たな世界像が入ってきた。それは、ムウェネムタパが神に従属する世界。あるいは、人々が実際に[Root.GetName]を支配する世界だ。\nしかし、思想だけでは国家の近代化はできない。政府の基幹をより善良なる国民のために変化させるには、技術と知識が必要だ。"
+ zim_modernize_state_desc:1 "建国以来、民衆はムウェネムタパをジンバブエの神、ムワリの化身として崇めてきた。北からの異邦人の到来により、民衆の頭の中には新たな世界像が入ってきた。それは、ムウェネムタパが神に従属する世界。あるいは、人々が実際に[Root.GetName]を支配する世界だ。\nしかし、思想だけでは国家の近代化はできない。政府の基幹をより善良なる民衆のために変化させるには、技術と知識が必要だ。"
  aju_annex_mogadishu_title:0 "モガディシュの併合"
  aju_annex_mogadishu_desc:0 "モガディシュはアフリカの角の真珠だ。モガディシュは、この都市は、アラブ世界やインド世界から商人を呼び寄せる素晴らしい交易中心地である。この麗しき都市を統合し、その影響力を自国のために利用すべき時である。"
  aju_gold_minting_title:0 "金の入手法を得よ"
@@ -1289,7 +1289,7 @@
  aju_indian_trade_ct:0 "§Yインド§!にある交易ノードのいずれかで、§Y5%§!以上の交易力を持つ全国家において、イベント「§Y[Root.GetName]の硬貨§!」が発生する。"
  AJU_INDIAN_MERCHANTS:0 "インドのアジューラーン商人"
  AJU_JAVA_MERCHANTS:0 "ジャワ島のアジューラーン商人"
- aju_invent_istunka_ct:0 "[2776.GetName]は、ゲーム終了まで、州補正§Yイストゥンカの本場§!を獲得し、以下の効果を得ます：\n国家不穏度：§G-1.00§!\n州の開発コスト：§G-5.0%§!"
+ aju_invent_istunka_ct:0 "[2776.GetName]は、ゲーム終了まで、州補正§Yイストゥンカの本場§!を獲得し、以下の効果を得ます：\n国家の不穏度：§G-1.00§!\n州の開発コスト：§G-5.0%§!"
  aju_oromo_invasion_tt:0 "イベント「§Yオロモ人§!」発生後、§Y10年§!経過した。"
  aju_unite_the_clans_tt:0 "§Yソマリ§!文化の州はすべて、§Y25年間§!、州補正「§Y氏族の団結§!」を獲得し、以下の効果を得ます：\n州の不穏度：§G-4.00§!\n州の人的資源補正：§G+10.0%§!\n州の税補正：§G+10.0%§!\n州の生産効率：§G+10.0%§!"
  aju_indian_trade_title:0 "インドとの交易"
@@ -1680,7 +1680,7 @@
  tooltip_central_african_ancestor_cult:0 "このカルトを選択した際の効果は以下の通り：\n真の信仰の寛容度：§G+2.00§!"
  tooltip_mwari_cult:0 "このカルトを選択した際の効果は以下の通り：\n規律：§G+2.5%§!"
  tooltip_enkai_cult:0 "このカルトを選択した際の効果は以下の通り：\n人的資源の回復速度：§G+15.0%§!"
- tooltip_waaq_cult:0 "このカルトを選択した際の効果は以下の通り：\n国家不穏度：§G-2.00§!"
+ tooltip_waaq_cult:0 "このカルトを選択した際の効果は以下の通り：\n国家の不穏度：§G-2.00§!"
  tooltip_zanahary_cult:0 "このカルトを選択した際の効果は以下の通り：\n月間戦争疲弊：§G-0.05§!"
  tooltip_christianity_cult:0 "このカルトを選択した際の効果は以下の通り：\n域内交易力：§G+25.0%§!"
  tooltip_islam_cult:1 "このカルトを選択した際の効果は以下の通り：\n制度の普及：§G+10.0%§!"
@@ -1808,7 +1808,7 @@
  oyo_shaman_gathering:0 "シャーマンの集合"
  desc_oyo_shaman_gathering:0 "自国の信仰の異なるシャーマンは、自国の信仰の統一された展望を紡ぐことができる。"
  zan_kilwan_embassy:0 "キルワ大使館"
- desc_zan_kilwan_embassy:0 "この州にはキルワからの大使館があり、ペルシアとアフリカの外交窓口となっている。\n\n§Y州の所有者が変わった場合、この補正は削除される。§!"
+ desc_zan_kilwan_embassy:0 "この州にはキルワからの大使館があり、ペルシアとアフリカの外交窓口となっている。\n\n§Y州の所有者が変わった場合、この補正は削除されます。§!"
  zan_persian_embassy:0 "ペルシア大使館"
  desc_zan_persian_embassy:1 "この州は[2218.Owner.GetName]からの大使が滞在しており、ペルシャーアフリカ間の外交窓口として務めている。\n\n§Y領有国が変更された場合、この補正は削除される。§!"
  zan_embassy_desc:1 "州の領有国が変更されるまで継続する"
