--- a/source/localisation/policies_l_english.yml
+++ b/source/localisation/policies_l_english.yml
@@ -166,15 +166,15 @@
  chaplains_of_the_fleet:0 "艦隊の牧師"
  desc_chaplains_of_the_fleet:0 "外洋における激しい嵐は、船員、特に戦争で疲弊した船で旅する船員の信仰の良い試験となる。艦隊にいる軍の牧師は、逆境の時期を通じて希望を維持することで、我々の募兵を助けている。"
  moral_economy_act:0 "道徳的経済法"
- desc_moral_economy_act:0 "多くの州は、財政および商業的発展を促進するためにできる限りの努力を行っているようだ。これは、物事の意図された自然な性質を破壊するため、多くの国民は非常に怒っている。正しい価格と伝統的権利が尊重され、保護された適切な道徳的経済を維持するという我々の経済政策に焦点を当てることによって、我々は他のすべての人々が従うべき模範を設定する。"
+ desc_moral_economy_act:0 "多くの州は、財政および商業的発展を促進するためにできる限りの努力を行っているようだ。これは、物事の意図された自然な性質を破壊するため、多くの臣民は非常に怒っている。正しい価格と伝統的権利が尊重され、保護された適切な道徳的経済を維持するという我々の経済政策に焦点を当てることによって、我々は他のすべての人々が従うべき模範を設定する。"
  field_priests:0 "戦場の司祭と祈祷書"
  desc_field_priests:0 "我々は兵士たちが熱意を抱き、聖なる目的のために、自身を犠牲にすることを厭わないよう努力するようにしなければならない。常に我々は、戦場にいる兵士たちの精神的な健康を守り、礼拝を導き、命が終わったときに世話をする司祭が大勢いることを保証する必要がある。我々はまた、作戦中に彼らが望む可能性のある祈祷書や他の宗教的資料の不足がないことを確実にしなければならない。"
  currency_council:0 "通貨に関する評議会"
  desc_currency_council:0 "我々の鋳造を監督する通貨委員会を確立することにより、我々は通貨の不要な変造を防ぐことができる。"
  policy_religious_freedom_act:0 "信教自由法"
- desc_policy_religious_freedom_act:0 "彼らが正しいと感じた神々をどれでも崇拝できるよう、すべての国民に良心の自由を与える。"
+ desc_policy_religious_freedom_act:0 "彼らが正しいと感じた神々をどれでも崇拝できるよう、すべての臣民に良心の自由を与える。"
  the_redemption_act:0 "救済法"
- desc_the_redemption_act:0 "共通の信仰への回帰と引き換えに、異端犯罪に対する恩赦を与えることによって、我々の誤った国民たちに魂を救うよう奨励する。"
+ desc_the_redemption_act:0 "共通の信仰への回帰と引き換えに、異端犯罪に対する恩赦を与えることによって、迷える臣民たちに魂を救うよう奨励する。"
  provincial_autonomy:0 "州の自治"
  desc_provincial_autonomy:0 "防衛の分野で州に自治権を与えることで、我々は内外から敵がそれらを奪うことをより困難にする。"
  mission_of_civilize:0 "文明化への宣教"
