--- a/source/localisation/womeninhistory_l_english.yml
+++ b/source/localisation/womeninhistory_l_english.yml
@@ -268,7 +268,7 @@
  women_history_events.65.a:0 "彼女が神聖ローマ帝国皇帝の耳であるなら、彼女は我々の耳でもある。"
  women_history_events.65.b:0 "この国家には支配者として彼女が必要だ。"
  women_history_events.66.t:0 "イサベル・クララ・エウヘニア"
- women_history_events.66.d:0 "1621年に亡くなった夫アルブレヒトと共に、スペインとポルトガルのインファンタであったイサベル・クララ・エウヘニアは、低地国家におけるネーデルラントの君主であり、彼の死後、ネーデルラント総督に任命された。彼らの治世は平和と安定によって黄金時代をもたらした。アルブレヒトとイザベルは、まずネーデルラントをスペインから独立させようと試み、それが不可能であると証明されたため、代わりに南部州をスペイン君主国に再統合するため努力した。これはフランドルの社会階級の間では不人気であったが、彼らは政治的課題をあきらめなかった。目に見える芸術が彼らにとって好まれた道具となり、完璧なものとなった。バロックが人気を集め、ピーテル・パウル・ルーベンス、小ピーテル・ブリューゲル、クーベルヘル、デ・ノール一族、ファン・フェーンのような多くの芸術家に対するイサベルとアルブレヒトの後援により、この芸術的運動の成長が生まれ、フランドル・バロック絵画が作り出された。ブリュッセルの宮廷は、芸術家や外交官から脱出者、スパイ、懺悔した裏切り者、イングランドの音楽家、イタリアの教師、スペインの告白者、ブルゴーニュの役人、ドイツの衛兵、ベルギーの貴族まで、あらゆる種類の人々で満ち溢れた。ブリュッセルは今、アルブレヒトとイサベル・クララ・エウヘニアのおかげで、ヨーロッパの政治における重要なつながりとなっている。"
+ women_history_events.66.d:0 "1621年に亡くなった夫アルブレヒトと共に、スペインとポルトガルのインファンタであったイサベル・クララ・エウヘニアは、低地諸国におけるネーデルラントの君主であり、彼の死後、ネーデルラント総督に任命された。彼らの治世は平和と安定によって黄金時代をもたらした。アルブレヒトとイザベルは、まずネーデルラントをスペインから独立させようと試み、それが不可能であると証明されたため、代わりに南部州をスペイン君主国に再統合するため努力した。これはフランドルの社会階級の間では不人気であったが、彼らは政治的課題をあきらめなかった。目に見える芸術が彼らにとって好まれた道具となり、完璧なものとなった。バロックが人気を集め、ピーテル・パウル・ルーベンス、小ピーテル・ブリューゲル、クーベルヘル、デ・ノール一族、ファン・フェーンのような多くの芸術家に対するイサベルとアルブレヒトの後援により、この芸術的運動の成長が生まれ、フランドル・バロック絵画が作り出された。ブリュッセルの宮廷は、芸術家や外交官から脱出者、スパイ、懺悔した裏切り者、イングランドの音楽家、イタリアの教師、スペインの告白者、ブルゴーニュの役人、ドイツの衛兵、ベルギーの貴族まで、あらゆる種類の人々で満ち溢れた。ブリュッセルは今、アルブレヒトとイサベル・クララ・エウヘニアのおかげで、ヨーロッパの政治における重要なつながりとなっている。"
  women_history_events.66.a:0 "最適なのは我々の顧問となることだろう。"
  women_history_events.66.b:0 "我々を支配するため彼女が必要だ。"
  women_history_events.67.t:0 "ウルシュラ・マイェリン"
@@ -373,7 +373,7 @@
  women_history_events.90.a:0 "彼女は宮廷で、顧問として働かせるべきだ！"
  women_history_events.90.b:0 "彼女は美しいだけでなく、軍隊を率いる方法を理解している！"
  women_history_events.91.t:0 "鄭一嫂"
- women_history_events.91.d:0 "賢明で鋭い海賊の女王である鄭一嫂は、「華南の恐怖」として呼ばれ、彼女は海賊行為で得た全ての戦利品を自身が保持できるよう交渉していた。$COUNTRY$は最近の攻撃で63隻もの船が失われたことで、彼女を倒すことが不可能であることが明らかとなったため、すべての海賊に恩赦が与えられ、鄭一嫂はこれを利用した。裕福な女性としての経歴を終え、彼女は夫である張保と共に引退した。彼女の船団には2～4万人の海賊が乗っている300以上の帆船があると主張する者もいれば、彼女が約8万人の男性、女性、さらには子供の乗組員を乗せた、1800隻の船を所有していると主張する者もいた。鄭一嫂は、元々妓女であった。しかし、海賊に捕らえられ、当時もっとも有力な海賊の一人であった鄭一と結婚し、彼の死後、その船団を支配したのだ。紅旗幫は鄭一が軍事的な主張と名声を利用して集結させたいくつかの競合する広東海賊団の連合であった。彼はヴェトナムで亡くなり、鄭一嫂は個人的に関係を築いて指導者の地位に就いた。彼女は実質的な船長となり、規則を制定して船団を統一した。第一の規則は、個人的に命令を下したり、上官の命令に従わない者は即座に斬首するというものであった。第二の規則は、公的な支援や海賊に対して補給を行った村人からの略奪を禁じている。第三の規則は、戦利品して得られたすべての品物は、船長によって提出されて、登録され、その後、船団の指揮官によって配布されなければならないというものであった。20%が元の略奪者に与えられ、残りは公的な資金に加えられた。第四の規則は、あらゆる現金は船団の指揮官に引き渡され、不運な船のための補給品の購入に充てられるというものであった。船団は、マカオから広州に至るまで、町、市場、村を略奪し、多くの沿岸部の村に覇権を築き、場合によっては居留地に課徴金や税を課すことさえあった。"
+ women_history_events.91.d:0 "狡猾で抜け目のない海賊の女王、「華南の恐怖」鄭一嫂は、戦利品をすべて手元に残すよう交渉した。$COUNTRY$は最近の襲撃で63隻もの船が失われ、鄭を倒すことが不可能となったため、すべての海賊に恩赦が与えられ、鄭はこれを利用した。大金持ちになった鄭は、夫である張保と共に海賊を引退した。鄭の船団には300隻以上のジャンクに2～4万人の海賊が乗り込んでいたと言う者もいれば、1800隻の船に約8万人の男女、さらには子供まで乗船していたと言う者もいた。鄭一嫂は、元々妓女であった。しかし、海賊に捕らえられ、当時有力な海賊であった鄭一と結婚し、彼の死後、その船団を支配したのだ。その船団、紅旗幇は鄭一が軍事的な主張と名声を利用して集結させた、広東海賊団の同業者連合であった。鄭一をヴェトナムで亡くした鄭一嫂は個人的に関係を築いて指導者の地位に就いた。彼女は船長たちにとって必要不可欠な存在となり、掟を発行して船団を団結させた。第一の掟は、自分勝手な命令や上官の命令に従わない者は即刻斬首するというものだった。第二の掟は、公的な支援や海賊に補給を行った村人からの略奪を禁じた。第三の掟は、戦利品して得られた品はすべて、各艦の事務長によって提出・登録された後、船団長によって配布されなければならないというものであった。2割が元の略奪者に与えられ、残りは公金に加えられた。第四の掟は、あらゆる現金は戦隊長に引き渡され、不成功に終わった船への補給品購入に充てられるというものであった。海賊団は、マカオから広州に至るまでの町・市場・村を略奪し、多くの沿岸部の村に覇権を築き、場合によっては集落に課徴金や税を課すことさえあった。"
  women_history_events.91.a:0 "我々は彼女から多くを学べるかもしれない。"
  women_history_events.91.b:0 "引退した彼女を呼び戻し、艦隊の指揮を任せる。"
  women_history_events.92.t:0 "メンテワブ"
