--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -705,29 +705,29 @@
  custodian_of_the_two_holy_mosques:0 "二聖都の守護者"
  desc_custodian_of_the_two_holy_mosques:0 "我々はメッカとメディナの都市を支配し、イスラム世界で最も神聖な聖廟を管理している。"
  organised_through_bishops_aspect:0 "司教を通じた組織化"
- desc_organised_through_bishops_aspect:1 "司教は、以前は都市部に限られた単一の教会の指導者であった。今日では、より広い地域の教会を率い、もはや個々の集会に奉仕することはない。司祭は、各教会へと奉仕するために任命され、司教の代理人として行動する。\n\n §Y10§!年間、建設コストが§G-10%§!されます"
+ desc_organised_through_bishops_aspect:1 "司教は、以前は都市部に限られた単一の教会の指導者であった。今日では、より広い地域の教会を率い、もはや個々の集会に奉仕することはない。司祭は、各教会へと奉仕するために任命され、司教の代理人として行動する。\n\n　§Y10§!年間、建設コスト§G-10%§!"
  priests_may_marry_aspect:0 "司祭は結婚できる"
- desc_priests_may_marry_aspect:1 "皇帝ユスティニアヌス1世は、聖職にある聖職者が結んだあらゆる結婚は無効であると宣言し、そのような結婚で生まれた子供たちを違法と宣言した。司祭はいつも、多かれ少なかれ不法に妻と暮らしているが、独身であることが要求されている。司祭たちが結婚できるようにすることによって、我々は聖職者の結婚に承認の印を与え、聖書の根拠に基づいて独身の掟を非難した。\n\n §Y10§!年間、真の宗教の寛容度が§G+1§!されます"
+ desc_priests_may_marry_aspect:1 "皇帝ユスティニアヌス1世は、聖職にある聖職者が結んだあらゆる結婚は無効であると宣言し、そのような結婚で生まれた子供たちを違法と宣言した。司祭はいつも、多かれ少なかれ不法に妻と暮らしているが、独身であることが要求されている。司祭たちが結婚できるようにすることによって、我々は聖職者の結婚に承認の印を与え、聖書の根拠に基づいて独身の掟を非難した。\n\n　§Y10§!年間、真の宗教の寛容度§G+1§!"
  adult_baptism_aspect:0 "成人のバプテスマ"
- desc_adult_baptism_aspect:1 "イエス・キリストを信仰する告白に基づいて成人としてバプテスマを受け、恵みと教会員を救うことが神からの贈り物だと信じる人々によって、地元の信仰社会への入会が行われる。受取人の信仰は声で発せられなければならず、一人の人間から別の人に分け与えたり移されたりすることはできない。\n\n §Y10§!年間、真の信仰州の人的資源が§G+10%§!されます"
+ desc_adult_baptism_aspect:1 "イエス・キリストを信仰する告白に基づいて成人としてバプテスマを受け、恵みと教会員を救うことが神からの贈り物だと信じる人々によって、地元の信仰社会への入会が行われる。受取人の信仰は声で発せられなければならず、一人の人間から別の人に分け与えたり移されたりすることはできない。\n\n　§Y10§!年間、真の信仰州の人的資源§G+10%§!"
  holy_sacraments_aspect:0 "聖なる秘跡"
- desc_holy_sacraments_aspect:1 "7つの秘跡は、キリストによって確立され、教会に委ねられた恵みの有効な兆候であり、神の命が我々に分配される儀式である。これらの聖なる秘跡は、洗礼、堅信または傅膏機密、聖餐、告解、病者の塗油、叙階、結婚である。\n\n §Y10§!年間、士気ダメージが§G+5%§!されます"
+ desc_holy_sacraments_aspect:1 "7つの秘跡は、キリストによって確立され、教会に委ねられた恵みの有効な兆候であり、神の命が我々に分配される儀式である。これらの聖なる秘跡は、洗礼、堅信または傅膏機密、聖餐、告解、病者の塗油、叙階、結婚である。\n\n　§Y10§!年間、士気ダメージ§G+5%§!"
  saints_accept_prayers_aspect:0 "聖人は祈りを受け入れる"
- desc_saints_accept_prayers_aspect:1 "罪を犯した信者のために神への仲介や祈りを求められる聖人達の神への執り成しは我々の教会に支持される教義です。\n\n §Y10§!年間、戦闘からの陸軍伝統が§G+100%§!されます"
+ desc_saints_accept_prayers_aspect:1 "罪を犯した信者のために神への仲介や祈りを求められる聖人達の神への執り成しは我々の教会に支持される教義です。\n\n　§Y10§!年間、戦闘からの陸軍伝統§G+100%§!"
  icons_images_aspect:0 "聖像"
- desc_icons_images_aspect:1 "イエス、マリア、聖人、天使を描写した絵は、石で刻まれ、布に刺繍され、木に塗られたり、さまざまな方法で作られて、多くの場合飾られている。これらの聖像については議論され反対されてきたが、人気のある聖像のために彼らの存在が保証され、教会はついに聖像の崇拝を許可することを甘受した。\n\n §Y10§!年間、統治者の文化を持つ顧問の費用が§G-10%§!されます"
+ desc_icons_images_aspect:1 "イエス、マリア、聖人、天使を描写した絵は、石で刻まれ、布に刺繍され、木に塗られたり、さまざまな方法で作られて、多くの場合飾られている。これらの聖像については議論され反対されてきたが、人気のある聖像のために彼らの存在が保証され、教会はついに聖像の崇拝を許可することを甘受した。\n\n　§Y10§!年間、統治者の文化を持つ顧問の費用§G-10%§!"
  legalised_divorces_aspect:0 "合法的な離婚"
- desc_legalised_divorces_aspect:1 "婚姻が世俗的契約とみなされるようになるまでは、教会権威が婚姻の無効を決定していた。世俗権威は\"divortium a vinculo matrimonii\"即ち「結婚による全ての結びつきからの分離」の布告ができ、それによって婚姻を解消した。\n\n §Y10§!年間、政府改革進捗度の増加が§G+10%§!されます"
+ desc_legalised_divorces_aspect:1 "婚姻が世俗的契約とみなされるようになるまでは、教会権威が婚姻の無効を決定していた。世俗権威は\"divortium a vinculo matrimonii\"即ち「結婚による全ての結びつきからの分離」の布告ができ、それによって婚姻を解消した。\n\n　§Y10§!年間、政府改革進捗度の増加§G+10%§!"
  heretics_deported_aspect:0 "異端者の追放"
- desc_heretics_deported_aspect:1 "異端者たちが、異端であると信じられている信念や意見により、我々の教会に反対する人々への処刑は、この罪の有罪判決を受けた人の追放に置き換えられている。\n\n §Y10§!年間、入植可能性が§G+10%§!されます"
+ desc_heretics_deported_aspect:1 "異端者たちが、異端であると信じられている信念や意見により、我々の教会に反対する人々への処刑は、この罪の有罪判決を受けた人の追放に置き換えられている。\n\n　§Y10§!年間、入植可能性§G+10%§!"
  parish_registers_aspect:0 "教区の登録"
- desc_parish_registers_aspect:1 "洗礼、結婚、埋葬の詳細は今から教区登録簿に記録される。各教区の司祭は、これらの行事に参加し、2つの鍵による確実な貴重品箱に本を保管する。\n\n §Y10§!年間、年間汚職が§G-0.10%§!されます"
+ desc_parish_registers_aspect:1 "洗礼、結婚、埋葬の詳細は今から教区登録簿に記録される。各教区の司祭は、これらの行事に参加し、2つの鍵による確実な貴重品箱に本を保管する。\n\n　§Y10§!年間、年間汚職§G-0.10%§!"
  individual_creeds_aspect:0 "個人の信条"
- desc_individual_creeds_aspect:1 "人々が自分の意見や宗教についての信念を形成することを可能にする、自由な思考によるより高い寛容性を持ち、それを受け入れることは、技術の向上へとつながる。\n\n §Y10§!年間、有効な顧問が§G+2§!されます"
+ desc_individual_creeds_aspect:1 "人々が自分の意見や宗教についての信念を形成することを可能にする、自由な思考によるより高い寛容性を持ち、それを受け入れることは、技術の向上へとつながる。\n\n　§Y10§!年間、利用可能な顧問§G+2§!"
  allow_usury_aspect:0 "高利貸しの許可"
- desc_allow_usury_aspect:1 "貸し手を豊かにする利息を課した金銭的な融資は今や認められており、もはや罪深いものとはみなされない。\n\n §Y10§!年間、金利が§G-0.5%§!されます"
+ desc_allow_usury_aspect:1 "貸し手を豊かにする利息を課した金銭的な融資は今や認められており、もはや罪深いものとはみなされない。\n\n　§Y10§!年間、金利§G-0.5%§!"
  translated_bibles_aspect:0 "翻訳された聖書"
- desc_translated_bibles_aspect:1 "聖書を他の言語に翻訳することで、精神と心に話しかける言葉で神を知るための最良の資産が人々に与えられる。\n\n §Y10§!年間、真の信仰州の制度普及が§G+25%§!されます"
+ desc_translated_bibles_aspect:1 "聖書を他の言語に翻訳することで、精神と心に話しかける言葉で神を知るための最良の資産が人々に与えられる。\n\n　§Y10§!年間、真の信仰州の制度普及§G+25%§!"
  GOVERNMENT_RANK:0 "政体と政府ランク"
  GOV_RANK:0 "政府ランク"
  gov_rank_1:0 "政府ランク"
@@ -1687,11 +1687,11 @@
  MOVE_CANT_RETREAT_FROM_COMBAT:0 "戦闘中のため、$VAL|Y$日はここを離れることは出来ない！"
  LOGIN_PDX_PENDING:0 "現在、あなたはログインしていません。ログイン処理中です。しばらくお待ちください…"
  justified_religious_war_aspect:0 "正当化された紛争"
- desc_justified_religious_war_aspect:1 "この国の新しい教会は異教や異端に脅かされている。聖書によって、この自衛のための紛争を正当化しよう。\n\n §Y10§!年間、他宗教に対する戦勝点コストが§G-10%§!されます"
+ desc_justified_religious_war_aspect:1 "この国の新しい教会は異教や異端に脅かされている。聖書によって、この自衛のための紛争を正当化しよう。\n\n　§Y10§!年間、他宗教に対する戦勝点コスト§G-10%§!"
  war_preaches_aspect:1 "戦中での説教"
- desc_war_preaches_aspect:1 "争いが絶えない時代においては、信仰が民衆に希望を抱かせる助けとなる。我々の教会では、暗き時代にあっても人々を照らすために聖書の説教を行うのだ。\n\n §Y10§!年間、戦争税コストが§G-100%§!されます"
+ desc_war_preaches_aspect:1 "争いが絶えない時代においては、信仰が民衆に希望を抱かせる助けとなる。我々の教会では、暗き時代にあっても人々を照らすために聖書の説教を行うのだ。\n\n　§Y10§!年間、戦争税コスト§G-100%§!"
  head_of_the_church_aspect:0 "宗教指導者"
- desc_head_of_the_church_aspect:1 "教会は、もはや腐敗した外国の神権勢力に従属するものではない。その代わりに、あらゆる宗教問題は新たに宗教の指導者を務める統治者に向けられることになるだろう。\n\n §Y10§!年間の間、絶対主義が年間§G1%§!増加します"
+ desc_head_of_the_church_aspect:1 "教会は、もはや腐敗した外国の神権勢力に従属するものではない。その代わりに、あらゆる宗教問題は新たに宗教の指導者を務める統治者に向けられることになるだろう。\n\n　§Y10§!年間の間、年間絶対主義§G+1%§!"
  organised_through_bishops_aspect_modifier:0 "教会のアスペクトへの熱狂"
  desc_organised_through_bishops_aspect_modifier:0 "信仰に新たなアスペクトが導入されたことで、人々はこの新しい規範に従って生活するようになりました。"
  priests_may_marry_aspect_modifier:0 "教会のアスペクトへの熱狂"
