--- a/source/localisation/hints_l_english.yml
+++ b/source/localisation/hints_l_english.yml
@@ -138,7 +138,7 @@
  HINT_WARTAXES_TITLE:0 "戦争税"
  HINT_WARTAXES_TEXT:0 "戦争税は戦争中に徴収することができます。戦争税の徴収はあなたのユニットのコストを大幅に減少させますが、2年ごとに50£mil£のコストがかかります。"
  HINT_WAREXHAUSTION_TITLE:0 "戦争疲弊"
- HINT_WAREXHAUSTION_TEXT:0 "戦争疲弊は、あなたの国が戦争によってどのくらい荒廃したかを表しています。戦争疲弊が高まると国家の不穏度が高まり、連隊の募集や船の建造は大幅に遅くなります。また、州を中核州にすることは、より高価になるでしょう。戦争疲弊は外交力を使うことで減らすことができます。"
+ HINT_WAREXHAUSTION_TEXT:0 "戦争疲弊は、あなたの国が戦争によってどのくらい荒廃したかを表しています。戦争疲弊が高まると不穏度が高まり、連隊の募集や船の建造は大幅に遅くなります。また、州を中核州にすることは、より高価になるでしょう。戦争疲弊は外交力を使うことで減らすことができます。"
  HINT_REVOLTRISK_TITLE:0 "不穏度"
  HINT_REVOLTRISK_TEXT:0 "不穏度とは、州で反乱軍が出現する可能性のことです。不適切な文化・宗教、あるいはランダムイベント、すべて、州の不穏度に影響を与えます。低い安定度・正統性、高い戦争疲弊は、国家レベルでの不穏度に影響するものの一例です。"
  HINT_REBELS_TITLE:0 "反乱軍"
