--- a/source/localisation/mandate_of_heaven_l_english.yml
+++ b/source/localisation/mandate_of_heaven_l_english.yml
@@ -811,7 +811,7 @@
  IN_GOLDEN_ERA_DESC:0 "我々の黄金時代は$UNTIL$まで続きます。"
  UNITY_INCREASE:0 "宗教的団結の増加：$VAL$"
  BANNER_CANT_HAVE:1 "あなたの国家は八旗を召集できません。\n"
- BANNER_NOT_OWNED_PROV:0 "あなたが所有するステートからのみ八旗を召集することができます。あなたが所有する州を選択してください。\n"
+ BANNER_NOT_OWNED_PROV:0 "領有するステートからのみ八旗を召集することができます。あなたが領有する州を選択してください。\n"
  ENEMY_ALLIES2:0 "$NAME|Y$は他に以下の同盟国を持っています：\n"
  ENEMY_ALLY_PLAYER:0 "@$TAG$ $NAME$（人間プレイヤー）\n"
  ENEMY_ALLY:0 "@$TAG$ $NAME$\n"
