--- a/source/localisation/mare_nostrum_l_english.yml
+++ b/source/localisation/mare_nostrum_l_english.yml
@@ -97,7 +97,7 @@
  LEAGUE_TRADE_EMBARGO:0 "貿易同盟の指導国である$LEADER$が$TARGET$に対し禁輸をしているため、中止できません。"
  restore_roman_empire_title:0 "ローマ帝国の復興"
  restore_roman_empire_desc:0 "2世紀にかのローマ帝国が地中海全域とその彼方を制するひとつの帝国を築き上げて以来、誰もその偉業を再現できなかった。これらの土地を請求すれば、偽物共がコンスタンティノポリスや神聖ローマ帝国で叫びたてている主張を一笑に付し、我々こそがローマの真の後継者であると宣言できるだろう。"
- restore_roman_empire_tt:0 "あなたの所有するすべての州が、神聖ローマ帝国の一部でなくなります。"
+ restore_roman_empire_tt:0 "すべての領有州が、神聖ローマ帝国の一部でなくなります。"
  FLEET_BLOCKADING_PORTS:0 "§Y$ADJ$§!船がここで以下の港を封鎖しています："
  PORT_BLOCKADED_REASON:0 "右記にいる船により§Y港が封鎖されています§!："
  UNIT_AUTO_REPAIR_DAMAGED:0 "§Y損傷した船を修復§!"
