--- a/source/localisation/third_rome_l_english.yml
+++ b/source/localisation/third_rome_l_english.yml
@@ -127,7 +127,7 @@
  russian_tsardom_events.4.d:0 "何世紀にもわたってタタール人は我々の集落を襲撃し、それがためにステップ地帯との境界に沿って防御線を建設することとなった。逆茂木線はステップ地帯を越えやってくる襲撃を止めようとする要塞と守備隊の体制である。だが、この体制に隙間があればすぐに、境界線を突き抜けてタタール人が襲撃してくる危険性がある。\n[tatar_raided_province.GetName]での最近の襲撃は我らの防御を突破し、守られていない居住地を荒廃させてしまった。"
  russian_tsardom_events.4.a:0 "タタールに代償を支払わせねばならない！"
  russian_tsardom_events.5.t:0 "$YEAR$年のソボール"
- russian_tsardom_events.5.d:0 "必要な時に、[Root.GetName]の統治者が[Root.Capital.GetCapitalName]の人々へ、[Root.GovernmentName]の続く将来に関しての重要な決定において、彼らの力を貸してくれるよう求めることが可能であった。そのような集まりやソボールへの参加は、[Root.Monarch.GetTitle]の立派な臣民の義務であり、困難な時における国家的決意を強固としうる。\n恐らく、この危険に満ちた時代に、国民の助けを借りて前へと進むために、ソボールを招集する時が来たのだ。"
+ russian_tsardom_events.5.d:0 "必要な時に、[Root.GetName]の統治者が[Root.Capital.GetCapitalName]の人々へ、[Root.GovernmentName]の続く将来に関しての重要な決定において、彼らの力を貸してくれるよう求めることが可能であった。そのような集まりやソボールへの参加は、[Root.Monarch.GetTitle]の立派な臣民の義務であり、困難な時における国家的決意を強固としうる。\n恐らく、この危険に満ちた時代に、民衆の助けを借りて前へと進むために、ソボールを招集する時が来たのだ。"
  russian_tsardom_events.5.a:0 "素晴らしいアイデアだ。"
  russian_tsardom_events.5.b:0 "[Root.Monarch.GetName]は真の[Root.Monarch.GetTitle]であり、そのような援助は不要である。"
  russian_tsardom_events.6.t:0 "官僚機構の拡大"
@@ -330,7 +330,7 @@
  streltsy_inspection:0 "ストレリツィの点検"
  desc_streltsy_inspection:0 "ストレリツィのための定期的な点検や装備の交換にかかる資金が増加している。"
  streltsy_garrison:0 "守備隊の強化"
- desc_streltsy_garrison:0 "ストレリツィの徴兵で、我が国は全国民に魅力的な手段を提案できるようになった。多くの場合、これが意味するのは我が国の要塞により多くの人員と装備を配置でき、我が国は以前よりも固い防備で守られたということだ。"
+ desc_streltsy_garrison:0 "ストレリツィの徴兵で、我が国は全臣民に魅力的な手段を提案できるようになった。多くの場合、これが意味するのは我が国の要塞により多くの人員と装備を配置でき、我が国は以前よりも固い防備で守られたということだ。"
  streltsy_events.1.t:0 "ストレリツィの抗議"
  streltsy_events.1.d:0 "我が国の長引く戦争はストレリツィ部隊を疲弊させた。生涯を兵士として過ごすために、平和な時には家族を養い、家業を行っていたので、長期の戦争によってこの生活が困難になってしまった。ストレリツィの兵士の代表が今日[Root.Capital.GetCapitalName]に到着し、故郷に帰るかさもなくばより高い給料を払うよう求めてきた。"
  streltsy_events.1.a:0 "多少の譲歩は可能だ。"
