--- a/source/localisation/triggers_and_effects_l_english.yml
+++ b/source/localisation/triggers_and_effects_l_english.yml
@@ -366,8 +366,8 @@
  HAS_NOT_WINTER:0 "§Y$WINTER$§!ではない"
  NUMBER_OF_TRADE_COMPANIES_LESS_THAN:0 "$VALUE|Y$社未満の交易会社"
  NUMBER_OF_TRADE_COMPANIES_AT_LEAST:1 "$VALUE|Y$社以上の交易会社を持っている"
- NOT_OWNED_BY_TRADE_COMPANY:0 "交易会社に所有されていない\n"
- OWNED_BY_TRADE_COMPANY:0 "交易会社に所有されている\n"
+ NOT_OWNED_BY_TRADE_COMPANY:0 "交易会社が領有していない\n"
+ OWNED_BY_TRADE_COMPANY:0 "交易会社が領有している\n"
  TRADE_COMPANY_SIZE_LESS_THAN:0 "交易会社の所有州が$VALUE|Y$未満"
  TRADE_COMPANY_SIZE_AT_LEAST:0 "交易会社の所有州が$VALUE|Y$以上"
  IS_NOT_IN_TRADE_COMPANY_REGION:0 "$REGION|Y$交易会社地域内にない"
